@@ -2,6 +2,7 @@
 
 package de.monticore;
 
+import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
 import com.google.common.io.Files;
@@ -63,7 +64,6 @@ import de.monticore.codegen.cd2java._symboltable.serialization.SymbolDeSerDecora
 import de.monticore.codegen.cd2java._symboltable.serialization.Symbols2JsonDecorator;
 import de.monticore.codegen.cd2java._symboltable.symbol.*;
 import de.monticore.codegen.cd2java._symboltable.symbol.symbolsurrogatemutator.MandatoryMutatorSymbolSurrogateDecorator;
-import de.monticore.codegen.cd2java._tagging.*;
 import de.monticore.codegen.cd2java._visitor.*;
 import de.monticore.codegen.cd2java.cli.CDCLIDecorator;
 import de.monticore.codegen.cd2java.cli.CLIDecorator;
@@ -71,9 +71,6 @@ import de.monticore.codegen.cd2java.data.DataDecorator;
 import de.monticore.codegen.cd2java.data.DataDecoratorUtil;
 import de.monticore.codegen.cd2java.data.InterfaceDecorator;
 import de.monticore.codegen.cd2java.data.ListSuffixDecorator;
-import de.monticore.codegen.cd2java.interpreter.ASTEvaluateDecorator;
-import de.monticore.codegen.cd2java.interpreter.InterpreterDecorator;
-import de.monticore.codegen.cd2java.interpreter.InterpreterInterfaceDecorator;
 import de.monticore.codegen.cd2java.methods.AccessorDecorator;
 import de.monticore.codegen.cd2java.methods.MethodDecorator;
 import de.monticore.codegen.cd2java.methods.accessor.MandatoryAccessorDecorator;
@@ -94,6 +91,7 @@ import de.monticore.codegen.parser.Languages;
 import de.monticore.codegen.parser.ParserGenerator;
 import de.monticore.codegen.prettyprint.CDPrettyPrinterDecorator;
 import de.monticore.codegen.prettyprint.PrettyPrinterGenerator;
+import de.monticore.de.monticore.grammar.grammar_withconcepts._symboltable.Grammar_WithConceptsPhasedSTCFix;
 import de.monticore.dstlgen.DSTLGenScript;
 import de.monticore.generating.GeneratorEngine;
 import de.monticore.generating.GeneratorSetup;
@@ -104,7 +102,7 @@ import de.monticore.generating.templateengine.freemarker.FreeMarkerTemplateEngin
 import de.monticore.generating.templateengine.freemarker.MontiCoreTemplateLoader;
 import de.monticore.generating.templateengine.reporting.Reporting;
 import de.monticore.grammar.MCGrammarSymbolTableHelper;
-import de.monticore.grammar.cocos.GrammarCoCos;
+import de.monticore.grammar.cocos.GrammarCoCosFix;
 import de.monticore.grammar.grammar._ast.ASTMCGrammar;
 import de.monticore.grammar.grammar._symboltable.MCGrammarSymbol;
 import de.monticore.grammar.grammar_withconcepts.Grammar_WithConceptsMill;
@@ -112,10 +110,10 @@ import de.monticore.grammar.grammar_withconcepts._cocos.Grammar_WithConceptsCoCo
 import de.monticore.grammar.grammar_withconcepts._symboltable.Grammar_WithConceptsPhasedSTC;
 import de.monticore.grammar.grammar_withconcepts._symboltable.IGrammar_WithConceptsGlobalScope;
 import de.monticore.io.FileReaderWriter;
+import de.monticore.io.FileReaderWriterFix;
 import de.monticore.io.paths.MCPath;
 import de.monticore.symbols.basicsymbols.BasicSymbolsMill;
 import de.monticore.symbols.basicsymbols._symboltable.DiagramSymbol;
-import de.monticore.tagging.TagGenerator;
 import de.se_rwth.commons.Joiners;
 import de.se_rwth.commons.Names;
 import de.se_rwth.commons.configuration.Configuration;
@@ -223,12 +221,12 @@ public class MontiCoreScript extends Script implements GroovyRunner {
    */
   public Optional<ASTMCGrammar> parseGrammar(Path grammar) {
     if(!grammar.toFile().isFile()) {
-      Log.error("0xA1016 Cannot read " + grammar.toString() + " as it is not a file.");
+      Log.error("0xA1016 Cannot read " + grammar + " as it is not a file.");
     }
     try {
       return Grammar_WithConceptsMill.parser().parse(grammar.toString());
     } catch (IOException e) {
-      Log.error("0XA0115 IOException during parsing of " + grammar.toString());
+      Log.error("0XA0115 IOException during parsing of " + grammar);
     }
     return Optional.empty();
   }
@@ -242,14 +240,13 @@ public class MontiCoreScript extends Script implements GroovyRunner {
    */
   public List<ASTMCGrammar> parseGrammars(MCPath grammarPath) {
     List<ASTMCGrammar> result = Lists.newArrayList();
-
-    Iterator<Path> grammarPathIt = grammarPath.getEntries().iterator();
-    while(grammarPathIt.hasNext()) {
-      Path it = grammarPathIt.next();
+    
+    for (Path it : grammarPath.getEntries()) {
       Optional<ASTMCGrammar> ast = parseGrammar(it);
-      if(!ast.isPresent()) {
-        Log.error("0xA1017 Failed to parse " + it.toString());
-      } else {
+      if (ast.isEmpty()) {
+        Log.error("0xA1017 Failed to parse " + it);
+      }
+      else {
         result.add(ast.get());
       }
     }
@@ -306,7 +303,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
                              File outputDirectory) {
     // first cd (representing AST package) is relevant
     // -> will be only one cd in the future
-    ParserGenerator.generateFullParser(glex, cds.get(0), grammar, symbolTable, handcodedPath, templatePath, outputDirectory);
+    ParserGenerator.generateFullParser(glex, cds.getFirst(), grammar, symbolTable, handcodedPath, templatePath, outputDirectory);
   }
 
   /**
@@ -319,7 +316,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
   public void generateParser(GlobalExtensionManagement glex, ASTCDCompilationUnit astClassDiagram, ASTMCGrammar grammar,
                              IGrammar_WithConceptsGlobalScope symbolTable, MCPath handcodedPath, MCPath templatePath,
                              File outputDirectory) {
-    Log.errorIfNull(
+    Preconditions.checkNotNull(
             grammar,
             "0xA4107 Parser generation can't be processed: the reference to the grammar ast is null");
     ParserGenerator.generateFullParser(glex, astClassDiagram, grammar, symbolTable, handcodedPath, templatePath, outputDirectory);
@@ -335,7 +332,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
   public void generateParser(GlobalExtensionManagement glex, ASTMCGrammar grammar, IGrammar_WithConceptsGlobalScope symbolTable,
                              MCPath handcodedPath, MCPath templatePath, File outputDirectory,
                              boolean embeddedJavaCode, Languages lang) {
-    Log.errorIfNull(
+    Preconditions.checkNotNull(
             grammar,
             "0xA4108 Parser generation can't be processed: the reference to the grammar ast is null");
     ParserGenerator.generateParser(glex, grammar, symbolTable, handcodedPath, templatePath, outputDirectory, embeddedJavaCode, lang);
@@ -351,7 +348,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
    * @return a CD for the _prettyprint package
    */
   public ASTCDCompilationUnit generatePrettyPrinter(GlobalExtensionManagement glex, ASTMCGrammar grammar) {
-    Log.errorIfNull(
+    Preconditions.checkNotNull(
             grammar,
             "0xA4109 PrettyPrinter generation can't be processed: the reference to the grammar ast is null");
     return PrettyPrinterGenerator.generatePrettyPrinter(glex, grammar);
@@ -364,7 +361,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
    */
   public ASTMCGrammar createSymbolsFromAST(IGrammar_WithConceptsGlobalScope globalScope, ASTMCGrammar ast) {
     // Build grammar symbol table (if not already built)
-    String qualifiedGrammarName = Names.getQualifiedName(ast.getPackageList(), ast.getName());
+    String qualifiedGrammarName = Names.constructQualifiedName(ast.getPackageList(), ast.getName());
     Optional<MCGrammarSymbol> grammarSymbol = globalScope
         .resolveMCGrammarDown(qualifiedGrammarName);
 
@@ -373,7 +370,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
     if(grammarSymbol.isPresent()) {
       result = grammarSymbol.get().getAstNode();
     } else {
-      Grammar_WithConceptsPhasedSTC stCreator = new Grammar_WithConceptsPhasedSTC();
+      Grammar_WithConceptsPhasedSTC stCreator = new Grammar_WithConceptsPhasedSTCFix();
       stCreator.createFromAST(result);
     }
 
@@ -399,7 +396,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
                                                    ASTCDCompilationUnit ast) {
     // Build grammar symbol table (if not already built)
 
-    final String qualifiedCDName = Names.getQualifiedName(ast.getMCPackageDeclaration().getMCQualifiedName().getPartsList(),
+    final String qualifiedCDName = Names.constructQualifiedName(ast.getMCPackageDeclaration().getMCQualifiedName().getPartsList(),
         ast.getCDDefinition().getName());
     Optional<DiagramSymbol> cdSymbol = globalScope.resolveDiagramDown(
         qualifiedCDName);
@@ -425,7 +422,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
   public void runGrammarCoCos(ASTMCGrammar ast, IGrammar_WithConceptsGlobalScope scope) {
     // Run context conditions
     Grammar_WithConceptsCoCoChecker checker = new Grammar_WithConceptsCoCoChecker();
-    checker.addChecker((new GrammarCoCos()).getCoCoChecker());
+    checker.addChecker((new GrammarCoCosFix()).getCoCoChecker());
     checker.checkAll(ast);
     return;
   }
@@ -457,7 +454,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
   public List<ASTCDCompilationUnit> deriveCD(ASTMCGrammar astGrammar,
                                              GlobalExtensionManagement glex,
                                              ICD4AnalysisGlobalScope cdScope) {
-    List<ASTCDCompilationUnit> cds = new ArrayList<ASTCDCompilationUnit>();
+    List<ASTCDCompilationUnit> cds = new ArrayList<>();
     cds.add(deriveASTCD(astGrammar, glex, cdScope));
     cds.add(deriveSymbolCD(astGrammar, cdScope));
     cds.add(deriveScopeCD(astGrammar, cdScope));
@@ -512,7 +509,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
   public void reportCD(List<ASTCDCompilationUnit> cds, File outputDirectory) {
     // We precisely know the structure of the given list.
     // In future versions, this will be one combined CD only.
-    reportCD(cds.get(0), outputDirectory);
+    reportCD(cds.getFirst(), outputDirectory);
   }
 
   /**
@@ -699,18 +696,11 @@ public class MontiCoreScript extends Script implements GroovyRunner {
     decoratePrettyPrinter(glex, cds.get(0), cdScope, cds.get(3), decoratedCD, handCodedPath);
     decorateMill(glex, cdScope, cds.get(0), decoratedCD, handCodedPath);
     decorateCLI(glex, cdScope, cds.get(0), decoratedCD, handCodedPath);
-    decorateAuxiliary(glex, cdScope, cds.get(0), decoratedCD, handCodedPath);
+    decorateAuxiliary(glex, cdScope, cds.getFirst(), decoratedCD, handCodedPath);
     return decoratedCD;
   }
 
-  public ASTCDCompilationUnit decorateTagCD(GlobalExtensionManagement glex, ICD4AnalysisScope cdScope,
-                                         List<ASTCDCompilationUnit> cds, MCPath handCodedPath, ASTCDCompilationUnit decoratedCD, ASTMCGrammar astGrammar) {
-    decorateTagging(glex, cdScope, cds.get(0), decoratedCD, handCodedPath, astGrammar);
-    return decoratedCD;
-  }
-
-
-    public void decorateForSymbolTablePackage(GlobalExtensionManagement glex, ICD4AnalysisScope cdScope,
+  public void decorateForSymbolTablePackage(GlobalExtensionManagement glex, ICD4AnalysisScope cdScope,
                                             ASTCDCompilationUnit astClassDiagram, ASTCDCompilationUnit symbolClassDiagramm,
                                             ASTCDCompilationUnit scopeClassDiagramm,
                                             ASTCDCompilationUnit decoratedCD, MCPath handCodedPath) {
@@ -736,6 +726,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
     ArtifactScopeClassDecorator artifactScopeDecorator = new ArtifactScopeClassDecorator(glex, symbolTableService, visitorService, methodDecorator);
     SymbolSurrogateDecorator symbolReferenceDecorator = new SymbolSurrogateDecorator(glex, symbolTableService, visitorService, methodDecorator, new MandatoryMutatorSymbolSurrogateDecorator(glex));
     SymbolSurrogateBuilderDecorator symbolReferenceBuilderDecorator = new SymbolSurrogateBuilderDecorator(glex, symbolTableService, accessorDecorator);
+    SymbolSupplierDecorator symbolSupplierDecorator = new SymbolSupplierDecorator(glex, symbolTableService);
     CommonSymbolInterfaceDecorator commonSymbolInterfaceDecorator = new CommonSymbolInterfaceDecorator(glex, symbolTableService, visitorService, methodDecorator);
     SymbolResolverInterfaceDecorator symbolResolverInterfaceDecorator = new SymbolResolverInterfaceDecorator(glex, symbolTableService);
     SymbolDeSerDecorator symbolDeSerDecorator = new SymbolDeSerDecorator(glex, symbolTableService, handCodedPath);
@@ -746,6 +737,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
 
     SymbolTableCDDecorator symbolTableCDDecorator = new SymbolTableCDDecorator(glex, handCodedPath, symbolTableService, symbolDecorator,
             symbolBuilderDecorator, symbolReferenceDecorator, symbolReferenceBuilderDecorator,
+            symbolSupplierDecorator,
             scopeInterfaceDecorator, scopeClassDecorator,
             globalScopeInterfaceDecorator, globalScopeClassDecorator,
             artifactScopeInterfaceDecorator, artifactScopeDecorator,
@@ -798,21 +790,6 @@ public class MontiCoreScript extends Script implements GroovyRunner {
     CDTraverserDecorator decorator = new CDTraverserDecorator(glex, handCodedPath, visitorService, iTraverserDecorator, traverserDecorator, visitor2Decorator, handlerDecorator, inheritanceHandlerDecorator);
     decorator.decorate(cd, decoratedCD);
 
-  }
-
-  public void decorateWithInterpreter(List<ASTCDCompilationUnit> cds,
-                                      ASTCDCompilationUnit decoratedCD,
-                                      GlobalExtensionManagement glex) {
-    VisitorService visitorService = new VisitorService(cds.get(0));
-
-    InterpreterInterfaceDecorator interpreterInterfaceDecorator = new InterpreterInterfaceDecorator(glex, visitorService);
-    interpreterInterfaceDecorator.decorate(cds.get(0), decoratedCD);
-
-    InterpreterDecorator interpreterDecorator = new InterpreterDecorator(glex, visitorService);
-    interpreterDecorator.decorate(cds.get(0), decoratedCD);
-
-    ASTEvaluateDecorator evaluateDecorator = new ASTEvaluateDecorator(glex, visitorService);
-    evaluateDecorator.decorate(cds.get(0), decoratedCD);
   }
 
   public void decorateForCoCoPackage(GlobalExtensionManagement glex,
@@ -934,50 +911,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
     cdAuxiliaryDecorator.decorate(cd, decoratedCD);
   }
 
-  public void decorateTagging(GlobalExtensionManagement glex, ICD4AnalysisScope cdScope,
-                                ASTCDCompilationUnit cd, ASTCDCompilationUnit decoratedCD,
-                                MCPath handCodedPath, ASTMCGrammar astTagGrammar){
-    generateTagging(cd, decoratedCD, glex, handCodedPath, astTagGrammar);
-  }
 
-  protected void generateTagging(ASTCDCompilationUnit cd, ASTCDCompilationUnit decoratedCD,
-                                   GlobalExtensionManagement glex, MCPath handCodedPath, ASTMCGrammar astTagGrammar) {
-    ASTMCGrammar originalGrammar = getOriginalGrammarFromTagGrammar(astTagGrammar).get();
-
-    SymbolTableService symbolTableService = new SymbolTableService(cd);
-    VisitorService visitorService = new VisitorService(cd);
-    ParserService parserService = new ParserService(cd);
-    AbstractService abstractService = new AbstractService<>(cd);
-
-    TaggerDecorator taggerDecorator = new TaggerDecorator(glex, abstractService, visitorService, originalGrammar);
-    TagConformsToSchemaCoCoDecorator tagCoCoDecorator = new TagConformsToSchemaCoCoDecorator(glex, abstractService, visitorService, originalGrammar);
-    CDTaggingDecorator taggingDecorator = new CDTaggingDecorator(glex, taggerDecorator, tagCoCoDecorator);
-
-    taggingDecorator.decorate(cd, decoratedCD);
-  }
-
-  protected ASTCDCompilationUnit deriveTaggingCD(ASTMCGrammar astGrammar, ICD4AnalysisGlobalScope cdScope ) {
-    return new MC2CDTaggingTranslation(cdScope).apply(getOriginalGrammarFromTagGrammar(astGrammar).get());
-  }
-
-  // Find & load the grammar A for given ATagDefinition grammar
-  protected Optional<ASTMCGrammar> getOriginalGrammarFromTagGrammar(ASTMCGrammar astTagGrammar) {
-    String originalGrammarName;
-    if (astTagGrammar.getSymbol().getName().endsWith(TaggingConstants.TAGDEFINITION_SUFFIX)) {
-      originalGrammarName = astTagGrammar.getSymbol().getFullName().substring(0, astTagGrammar.getSymbol().getFullName().length() - TaggingConstants.TAGDEFINITION_SUFFIX.length());
-    }else if (astTagGrammar.getSymbol().getName().endsWith(TaggingConstants.TAGSCHEMA_SUFFIX)) {
-      originalGrammarName = astTagGrammar.getSymbol().getFullName().substring(0, astTagGrammar.getSymbol().getFullName().length() - TaggingConstants.TAGSCHEMA_SUFFIX.length());
-    }else{
-      Log.error("0xA1018 Unable to generate Tagging infrastructure on non TagSchema/TagDef Grammar:" + astTagGrammar.getSymbol().getFullName());
-      return Optional.empty();
-    }
-    Optional<MCGrammarSymbol> originalGrammarOpt = Grammar_WithConceptsMill.globalScope().resolveMCGrammar(originalGrammarName);
-    if (originalGrammarOpt.isEmpty()){
-      Log.error("0xA1026 Failed to resolve original grammar " + originalGrammarName + " of tag grammar " + astTagGrammar.getSymbol().getFullName());
-      return Optional.empty();
-    }
-    return Optional.of(originalGrammarOpt.get().getAstNode());
-  }
 
 
   public void decoratePrettyPrinter(GlobalExtensionManagement glex, ASTCDCompilationUnit input, ICD4AnalysisScope cdScope,
@@ -997,7 +931,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
   public List<ASTCDCompilationUnit> addListSuffixToAttributeName(List<ASTCDCompilationUnit> originalCDs) {
     ListSuffixDecorator listSuffixDecorator = new ListSuffixDecorator();
     // decoration is only applied to the first cd, representing the AST package
-    listSuffixDecorator.decorate(originalCDs.get(0), originalCDs.get(0));
+    listSuffixDecorator.decorate(originalCDs.getFirst(), originalCDs.getFirst());
     return originalCDs;
   }
 
@@ -1049,8 +983,10 @@ public class MontiCoreScript extends Script implements GroovyRunner {
     ASTDecorator astDecorator = new ASTDecorator(glex, astService, visitorService, astSymbolDecorator,
             astScopeDecorator, methodDecorator, symbolTableService);
 
-    ASTReferenceDecorator<ASTCDClass> astClassReferencedSymbolDecorator = new ASTReferenceDecorator<ASTCDClass>(glex, symbolTableService);
-    ASTReferenceDecorator<ASTCDInterface> astInterfaceReferencedSymbolDecorator = new ASTReferenceDecorator<ASTCDInterface>(glex, symbolTableService);
+    ASTReferenceDecorator<ASTCDClass> astClassReferencedSymbolDecorator =
+        new ASTReferenceDecorator<>(glex, symbolTableService);
+    ASTReferenceDecorator<ASTCDInterface> astInterfaceReferencedSymbolDecorator =
+        new ASTReferenceDecorator<>(glex, symbolTableService);
     ASTFullDecorator fullDecorator = new ASTFullDecorator(dataDecorator, astDecorator, astClassReferencedSymbolDecorator);
 
     ASTLanguageInterfaceDecorator astLanguageInterfaceDecorator = new ASTLanguageInterfaceDecorator(glex, astService, visitorService);
@@ -1103,7 +1039,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
     decoratePrettyPrinter(glex, cds.get(0), cdScope, cds.get(3), decoratedCD, handCodedPath);
     decorateMill(glex, cdScope, cds.get(0), decoratedCD, handCodedPath);
     decorateCLI(glex, cdScope, cds.get(0), decoratedCD, handCodedPath);
-    decorateAuxiliary(glex, cdScope, cds.get(0), decoratedCD, handCodedPath);
+    decorateAuxiliary(glex, cdScope, cds.getFirst(), decoratedCD, handCodedPath);
     return decoratedCD;
   }
 
@@ -1119,8 +1055,10 @@ public class MontiCoreScript extends Script implements GroovyRunner {
     ASTScopeDecorator astScopeDecorator = new ASTScopeDecorator(glex, symbolTableService);
     ASTEmfDecorator astEmfDecorator = new ASTEmfDecorator(glex, astService, visitorService,
             astSymbolDecorator, astScopeDecorator, methodDecorator, symbolTableService, emfService);
-    ASTReferenceDecorator<ASTCDClass> astClassReferencedSymbolDecorator = new ASTReferenceDecorator<ASTCDClass>(glex, symbolTableService);
-    ASTReferenceDecorator<ASTCDInterface> astInterfaceReferencedSymbolDecorator = new ASTReferenceDecorator<ASTCDInterface>(glex, symbolTableService);
+    ASTReferenceDecorator<ASTCDClass> astClassReferencedSymbolDecorator =
+        new ASTReferenceDecorator<>(glex, symbolTableService);
+    ASTReferenceDecorator<ASTCDInterface> astInterfaceReferencedSymbolDecorator =
+        new ASTReferenceDecorator<>(glex, symbolTableService);
 
     ASTFullEmfDecorator fullEmfDecorator = new ASTFullEmfDecorator(dataEmfDecorator, astEmfDecorator, astClassReferencedSymbolDecorator);
 
@@ -1162,7 +1100,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
                              ASTCDCompilationUnit cd, File outputDirectory, MCPath handcodedPath, MCPath templatePath) {
 
     // generate from CDs
-    generateFromCD(glex, oldCDs.get(0), cd, outputDirectory, handcodedPath, templatePath);
+    generateFromCD(glex, oldCDs.getFirst(), cd, outputDirectory, handcodedPath, templatePath);
 
   }
 
@@ -1201,7 +1139,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
     // we precisely know the list of old CDs, which will be merged to a single
     // CD in the future
     // generate from CDs
-    generateEmfFromCD(glex, oldCDs.get(0), cd, outputDirectory, handcodedPath, templatePath);
+    generateEmfFromCD(glex, oldCDs.getFirst(), cd, outputDirectory, handcodedPath, templatePath);
 
   }
 
@@ -1273,7 +1211,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
       MCGrammarSymbol sym = astGrammar.getSymbol();
       for(MCGrammarSymbol mcgsym: MCGrammarSymbolTableHelper.getAllSuperGrammars(sym)) {
         Optional<DiagramSymbol> importedCd = cdScope.resolveDiagramDown(mcgsym.getFullName());
-        if(!importedCd.isPresent() && mcgsym.isPresentAstNode()) {
+        if(importedCd.isEmpty() && mcgsym.isPresentAstNode()) {
           transformAndCreateSymbolTable(mcgsym.getAstNode(), glex, cdScope);
         }
       }
@@ -1286,7 +1224,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
       MCGrammarSymbol sym = astGrammar.getSymbol();
       for(MCGrammarSymbol mcgsym: MCGrammarSymbolTableHelper.getAllSuperGrammars(sym)) {
         Optional<DiagramSymbol> importedCd = cdScope.resolveDiagramDown(mcgsym.getFullName());
-        if(!importedCd.isPresent() && mcgsym.isPresentAstNode()) {
+        if(importedCd.isEmpty() && mcgsym.isPresentAstNode()) {
           transformAndCreateSymbolTableForSymbolCD(mcgsym.getAstNode(), cdScope);
         }
       }
@@ -1299,7 +1237,7 @@ public class MontiCoreScript extends Script implements GroovyRunner {
       MCGrammarSymbol sym = astGrammar.getSymbol();
       for(MCGrammarSymbol mcgsym: MCGrammarSymbolTableHelper.getAllSuperGrammars(sym)) {
         Optional<DiagramSymbol> importedCd = cdScope.resolveDiagramDown(mcgsym.getFullName());
-        if(!importedCd.isPresent() && mcgsym.isPresentAstNode()) {
+        if(importedCd.isEmpty() && mcgsym.isPresentAstNode()) {
           transformAndCreateSymbolTableForScopeCD(mcgsym.getAstNode(), cdScope);
         }
       }
@@ -1400,13 +1338,6 @@ public class MontiCoreScript extends Script implements GroovyRunner {
   }
 
   /**
-   * Generate the TagSchema and TagDefinition grammars and output them as mc4 files
-   */
-  public void generateTaggingLanguages(ASTMCGrammar astGrammar, File outputDirectory, MCPath modelPathHC) throws IOException {
-    TagGenerator.generateTaggingLanguages(astGrammar, outputDirectory, modelPathHC);
-  }
-
-  /**
    * Instantiates the glex and initializes it with all available default
    * options based on the current configuration.
    *
@@ -1469,7 +1400,8 @@ public class MontiCoreScript extends Script implements GroovyRunner {
      */
     @Override
     protected void doRun(String script, Configuration configuration) {
-      FileReaderWriter.init();
+      //FileReaderWriter.init(); remove fix once 7.8.0 released
+      FileReaderWriterFix.init();
 
       GroovyInterpreter.Builder builder = GroovyInterpreter.newInterpreter()
               .withScriptBaseClass(MontiCoreScript.class)
@@ -1506,7 +1438,6 @@ public class MontiCoreScript extends Script implements GroovyRunner {
           builder.addVariable(MODELPATH_LONG, modelPath);
           builder.addVariable(HANDCODEDMODELPATH_LONG, handcodedModelPath);
           builder.addVariable(GENDST_LONG, mcConfig.getGenDST().orElse(false)); // no transformation infrastructure generation by default
-          builder.addVariable(GENTAG_LONG, mcConfig.getGenTag().orElse(false)); // no tagging generation by default
           builder.addVariable(OUT_LONG, mcConfig.getOut());
           builder.addVariable(TOOL_JAR_NAME_LONG, mcConfig.getToolName());
           builder.addVariable(REPORT_LONG, mcConfig.getReport());
@@ -1514,7 +1445,6 @@ public class MontiCoreScript extends Script implements GroovyRunner {
           builder.addVariable(TEMPLATEPATH_LONG, templatePath);
           builder.addVariable(GROOVYHOOK1, mcConfig.getGroovyHook1());
           builder.addVariable(GROOVYHOOK2, mcConfig.getGroovyHook2());
-          builder.addVariable(GENINT, mcConfig.getGenINT().orElse(false));
           builder.addVariable("LOG_ID", LOG_ID);
           builder.addVariable("grammarIterator", grammarsPath.getEntries().iterator());
           reportsOpt = Optional.of(new MontiCoreReports(mcConfig.getOut().getAbsolutePath(),
@@ -1537,9 +1467,8 @@ public class MontiCoreScript extends Script implements GroovyRunner {
         for(MCPath mcPath: mcPaths) {
           mcPath.close();
         }
-        if(reportsOpt.isPresent()) {
-          reportsOpt.get().close();
-        }
+        // Notify the reporters about flushing & closing their file handles
+        reportsOpt.ifPresent(MontiCoreReports::close);
       }
     }
   }
