@@ -12,7 +12,6 @@ import de.monticore.cdbasis._ast.ASTCDClass;
 import de.monticore.cdbasis._ast.ASTCDCompilationUnit;
 import de.monticore.cdbasis._ast.ASTCDDefinition;
 import de.monticore.cdbasis._symboltable.CDTypeSymbol;
-import de.monticore.cdbasis._symboltable.CDTypeSymbolSurrogate;
 import de.monticore.cdbasis._symboltable.ICDBasisArtifactScope;
 import de.monticore.cdbasis._symboltable.ICDBasisScope;
 import de.monticore.cdinterfaceandenum._ast.ASTCDEnum;
@@ -21,6 +20,8 @@ import de.monticore.generating.templateengine.GlobalExtensionManagement;
 import de.monticore.generating.templateengine.StringHookPoint;
 import de.monticore.generating.templateengine.TemplateHookPoint;
 import de.monticore.symbols.basicsymbols._symboltable.DiagramSymbol;
+import de.monticore.symbols.basicsymbols._symboltable.TypeSymbol;
+import de.monticore.symboltable.ImportStatement;
 import de.monticore.types.check.SymTypeExpression;
 import de.monticore.types.mcbasictypes.MCBasicTypesMill;
 import de.monticore.types.mcbasictypes._ast.ASTMCQualifiedName;
@@ -85,8 +86,8 @@ public class ParserForSuperDecorator extends AbstractDecorator {
     Map<DiagramSymbol, Collection<CDTypeSymbol>> superProdsFromThis = calculateNonOverriddenCds(Maps.newLinkedHashMap(), service.getCDSymbol(), overridden, Lists.newArrayList());
 
     //necessary if a nt is overridden in a grammar between the super grammar and this grammar
-    List<CDTypeSymbol> allSuperProdsFromThis = superProdsFromThis.values().stream().flatMap(Collection::stream).collect(Collectors.toList());
-    List<String> superProdsFullNames = allSuperProdsFromThis.stream().map(CDTypeSymbol::getFullName).collect(Collectors.toList());
+    List<CDTypeSymbol> allSuperProdsFromThis = superProdsFromThis.values().stream().flatMap(Collection::stream).toList();
+    List<String> superProdsFullNames = allSuperProdsFromThis.stream().map(CDTypeSymbol::getFullName).toList();
 
     for(DiagramSymbol grammar: superProds.keySet()){
       Collection<CDTypeSymbol> typesInGrammar = superProds.get(grammar);
@@ -97,7 +98,7 @@ public class ParserForSuperDecorator extends AbstractDecorator {
       typesInGrammar.removeIf(type ->
           (service.hasLeftRecursiveStereotype(type.getAstNode().getModifier())|| service.hasExternalInterfaceStereotype(type.getAstNode().getModifier())));
     }
-    List<CDTypeSymbol> allOverriddenTypes = overridden.values().stream().flatMap(Collection::stream).collect(Collectors.toList());
+    List<CDTypeSymbol> allOverriddenTypes = overridden.values().stream().flatMap(Collection::stream).toList();
 
 
     //iterate over every overridden prod, generate parse methods for them
@@ -191,12 +192,12 @@ public class ParserForSuperDecorator extends AbstractDecorator {
    */
   protected void calculateOverriddenCds(DiagramSymbol cd, Collection<String> nativeClasses, Map<DiagramSymbol,
       Collection<CDTypeSymbol>> overridden, Collection<CDTypeSymbol> firstClasses) {
-    HashMap<String, CDTypeSymbol> l = Maps.newLinkedHashMap();
+    LinkedHashMap<String, CDTypeSymbol> l = Maps.newLinkedHashMap();
     //get all super cds / imports of the original cd
     Collection<DiagramSymbol> importedClasses = ((ICDBasisArtifactScope) cd.getEnclosingScope()).getImportsList().stream()
-        .map(i -> i.getStatement())
+        .map(ImportStatement::getStatement)
         .map(service::resolveCD)
-        .collect(Collectors.toList());
+        .toList();
     Collection<CDTypeSymbol> overriddenSet = Lists.newArrayList();
     //determine for every native prod of the original grammar if the super grammar has a prod with the same name
     //if yes then the prod is overridden
@@ -222,8 +223,12 @@ public class ParserForSuperDecorator extends AbstractDecorator {
     firstClasses.addAll(l.values());
   }
 
-  protected boolean overrides(CDTypeSymbol first, CDTypeSymbol second){
-     return getSuperTypesTransitive(first).stream().map(CDTypeSymbol::getFullName).collect(Collectors.toList()).contains(second.getFullName());
+  protected boolean overrides(CDTypeSymbol first, CDTypeSymbol second) {
+    if (first.equals(second)) {
+      // Speed up check for default case
+      return false;
+    }
+    return getSuperTypesTransitive(first).contains(second.getFullName());
   }
 
   protected List<ASTCDMethod> getOverriddenMethods(CDTypeSymbol type, DiagramSymbol grammar, Collection<CDTypeSymbol> firstClasses){
@@ -300,26 +305,43 @@ public class ParserForSuperDecorator extends AbstractDecorator {
     return methods;
   }
 
-  protected List<CDTypeSymbol> getSuperTypesTransitive(CDTypeSymbol startType) {
-    List<CDTypeSymbol> superTypes = new ArrayList();
-    if (startType.isPresentSuperClass()) {
-      SymTypeExpression ste = startType.getSuperClass();
-      CDTypeSymbolSurrogate s = new CDTypeSymbolSurrogate(ste.getTypeInfo().getFullName());
-      s.setEnclosingScope(ste.getTypeInfo().getEnclosingScope());
-      superTypes.add(s.lazyLoadDelegate());
-      superTypes.addAll(getSuperTypesTransitive(s.lazyLoadDelegate()));
-    }
-
-    for (SymTypeExpression ste : startType.getSuperTypesList()) {
-      CDTypeSymbolSurrogate tss = new CDTypeSymbolSurrogate(ste.getTypeInfo().getFullName());
-      tss.setEnclosingScope(ste.getTypeInfo().getEnclosingScope());
-      CDTypeSymbol i = tss.lazyLoadDelegate();
-      superTypes.add(i);
-      superTypes.addAll(getSuperTypesTransitive(i));
-    }
-    return superTypes;
+  protected Set<String> getSuperTypesTransitive(CDTypeSymbol startType) {
+    Set<String> superTypeNames = new LinkedHashSet<>();
+    getSuperTypesTransitive(startType, superTypeNames);
+    return superTypeNames;
   }
 
+  protected void getSuperTypesTransitive(CDTypeSymbol cdTypeSymbol, Set<String> superTypes) {
+    if (superTypes.contains(cdTypeSymbol.getFullName())) return; // typeSymbol already visited
+    // Add the name of the type symbol to the set
+    superTypes.add(cdTypeSymbol.getFullName());
+    // and delve into its super types
+    List<CDTypeSymbol> types = cdTypeSymbol.getEnclosingScope().resolveCDTypeMany(cdTypeSymbol.getFullName());
+    getSuperTypesTransitive(types, superTypes);
+  }
 
+  protected void getSuperTypesTransitive(TypeSymbol typeSymbol, Set<String> superTypes) {
+    if (superTypes.contains(typeSymbol.getFullName())) return; // typeSymbol already visited
+    // Add the name of the type symbol to the set
+    superTypes.add(typeSymbol.getFullName());
+    // and delve into its super types
+    List<CDTypeSymbol> types = ((ICDBasisScope) typeSymbol.getEnclosingScope()).resolveCDTypeMany(typeSymbol.getFullName());
+    getSuperTypesTransitive(types, superTypes);
+  }
+
+  protected void getSuperTypesTransitive(List<CDTypeSymbol> resolvedTypes, Set<String> superTypes) {
+    // if types is empty: CD Symbol not loaded (e.g., external type?) => unable to continue to load supertypes
+    if (!resolvedTypes.isEmpty()) {
+      CDTypeSymbol startTypeSymbol = resolvedTypes.getFirst(); // we expect to only find 1 symbol
+      if (startTypeSymbol.isPresentSuperClass()) {
+        // if a superclass is present: delve into it
+        getSuperTypesTransitive(startTypeSymbol.getSuperClass().getTypeInfo(), superTypes);
+      }
+      // Delve into all supertypes
+      for (SymTypeExpression ste : startTypeSymbol.getSuperTypesList()) {
+        getSuperTypesTransitive(ste.getTypeInfo(), superTypes);
+      }
+    }
+  }
 
 }
