@@ -7,11 +7,7 @@ import de.monticore.cd4code.CD4CodeMill;
 import de.monticore.cd4codebasis._ast.ASTCDConstructor;
 import de.monticore.cd4codebasis._ast.ASTCDMethod;
 import de.monticore.cd4codebasis._ast.ASTCDParameter;
-import de.monticore.cdbasis._ast.ASTCDAttribute;
-import de.monticore.cdbasis._ast.ASTCDClass;
-import de.monticore.cdbasis._ast.ASTCDDefinition;
-import de.monticore.cdbasis._ast.ASTCDPackage;
-import de.monticore.cdbasis._ast.ASTCDMember;
+import de.monticore.cdbasis._ast.*;
 import de.monticore.cdbasis._symboltable.CDTypeSymbol;
 import de.monticore.codegen.cd2java.AbstractCreator;
 import de.monticore.codegen.cd2java.JavaDoc;
@@ -21,13 +17,9 @@ import de.monticore.codegen.cd2java._visitor.VisitorService;
 import de.monticore.generating.templateengine.GlobalExtensionManagement;
 import de.monticore.generating.templateengine.StringHookPoint;
 import de.monticore.generating.templateengine.TemplateHookPoint;
-import de.monticore.mcbasics._prettyprint.MCBasicsFullPrettyPrinter;
-import de.monticore.prettyprint.IndentPrinter;
 import de.monticore.symbols.basicsymbols._symboltable.DiagramSymbol;
-import de.monticore.types.mcbasictypes.MCBasicTypesMill;
 import de.monticore.types.mcbasictypes._ast.ASTMCQualifiedType;
 import de.monticore.types.mcbasictypes._ast.ASTMCType;
-import de.monticore.types.mcfullgenerictypes.MCFullGenericTypesMill;
 import de.monticore.umlmodifier._ast.ASTModifier;
 import de.se_rwth.commons.StringTransformations;
 
@@ -36,8 +28,9 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+import static de.monticore.cd.codegen.CD2JavaTemplates.ANNOTATIONS;
 import static de.monticore.cd.codegen.CD2JavaTemplates.EMPTY_BODY;
-import static de.monticore.codegen.CD2JavaTemplatesFix.JAVADOC;
+import static de.monticore.cd.codegen.CD2JavaTemplates.JAVADOC;
 import static de.monticore.cd.codegen.TopDecorator.TOP_SUFFIX;
 import static de.monticore.cd.facade.CDModifier.*;
 import static de.monticore.codegen.cd2java._ast.ast_class.ASTConstants.*;
@@ -71,6 +64,7 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
   public ASTCDClass decorate(List<ASTCDPackage> packageList) {
     String millClassName = symbolTableService.getMillSimpleName();
     ASTMCType millType = this.getMCTypeFacade().createQualifiedType(millClassName);
+    ASTMCType millAttrType = millType;
 
     String fullDefinitionName = symbolTableService.getCDSymbol().getFullName();
 
@@ -78,7 +72,7 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
 
     ASTCDConstructor constructor = this.getCDConstructorFacade().createConstructor(PROTECTED.build(), millClassName);
 
-    ASTCDAttribute millAttribute = this.getCDAttributeFacade().createAttribute(PROTECTED_STATIC.build(), millType, MILL_INFIX);
+    ASTCDAttribute millAttribute = this.getCDAttributeFacade().createAttribute(PROTECTED_STATIC.build(), millAttrType, MILL_INFIX);
     // add all standard methods
     ASTCDMethod getMillMethod = addGetMillMethods(millType);
     ASTCDMethod initMethod = addInitMethod(millType, superSymbolList, fullDefinitionName);
@@ -109,7 +103,7 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
           .map(ASTCDClass.class::cast)
           .filter(x -> !x.getModifier().isAbstract())
           .filter(this::checkIncludeInMill)
-          .map(x -> x.deepClone())
+          .map(ASTCDClass::deepClone)
           .collect(Collectors.toList());
 
 
@@ -127,18 +121,13 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
       topClassList = topClassList
           .stream()
           .filter(this::checkIncludeInMill)
-          .collect(Collectors.toList());
+          .toList();
       // add to classes which need a builder method
       classList.addAll(topClassList);
 
       // add to all class list for reset and initMe method
       allClasses.addAll(classList);
 
-      // add mill attribute for each class
-      List<ASTCDAttribute> attributeList = new ArrayList<>();
-      for (String attributeName : getAttributeNameList(classList)) {
-        attributeList.add(this.getCDAttributeFacade().createAttribute(PROTECTED_STATIC.build(), millType, MILL_INFIX + attributeName));
-      }
       // add pretty printer functionality
       List<ASTCDMember> prettyPrinterMembersList = new ArrayList<>();
       Optional<ASTCDClass> fullPrettyPrinterCandidate = classList.stream().filter(c -> c.getName().endsWith(FULLPRETTYPRINTER_SUFFIX)).findFirst();
@@ -151,13 +140,12 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
           .map(e -> (ASTCDClass) e)
           .filter(c -> c.getName().endsWith(TYPE_DISPATCHER_SUFFIX))
           .findFirst();
-      typeDispatcherClass.ifPresent(c -> typeDispatcherMemberList.addAll(addTypeDispatcherMembers(c, cd, millType)));
+      typeDispatcherClass.ifPresent(c -> typeDispatcherMemberList.addAll(addTypeDispatcherMembers(c, cd)));
 
       //remove the methods that are generated in the code below the for-loop
       classList = classList.stream().filter(this::checkNotGeneratedSpecifically).collect(Collectors.toList());
       List<ASTCDMethod> builderMethodsList = addBuilderMethods(classList, cd);
 
-      millClass.addAllCDMembers(attributeList);
       millClass.addAllCDMembers(builderMethodsList);
       millClass.addAllCDMembers(prettyPrinterMembersList);
       millClass.addAllCDMembers(typeDispatcherMemberList);
@@ -166,7 +154,7 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     // decorate for traverser
     List<ASTCDMethod> traverserMethods = getAttributeMethods(visitorService.getTraverserSimpleName(),
         visitorService.getTraverserFullName(), TRAVERSER, visitorService.getTraverserInterfaceFullName());
-    this.replaceTemplate(JAVADOC, traverserMethods.get(0), JavaDoc.of("A traverser is the conceptual entry point for every action within the visitor infrastructure.",
+    this.replaceTemplate(JAVADOC, traverserMethods.getFirst(), JavaDoc.of("A traverser is the conceptual entry point for every action within the visitor infrastructure.",
             "Visitors may be added, which contain the implementations for the visit and endVisit methods.",
             "Handlers may be added to modify the default traversal strategy.",
             "Each traverser retains their traversed elements to avoid duplicate traversal, ",
@@ -194,9 +182,7 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
 
 
     if (!symbolTableService.hasComponentStereotype((ASTCDDefinition) symbolTableService.getCDSymbol().getAstNode())) {
-      ASTCDAttribute parserAttribute = getCDAttributeFacade().createAttribute(PROTECTED_STATIC.build(), millType, MILL_INFIX + parserService.getParserClassSimpleName());
       List<ASTCDMethod> parserMethods = getParserMethods();
-      millClass.addCDMember(parserAttribute);
       millClass.addAllCDMembers(parserMethods);
       allClasses.add(CD4AnalysisMill.cDClassBuilder()
           .setName(parserService.getParserClassSimpleName())
@@ -217,10 +203,10 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     List<ASTCDMethod> superMethodsList = addSuperBuilderMethods(superSymbolList, allClasses);
     millClass.addAllCDMembers(superMethodsList);
 
-    ASTCDMethod initMeMethod = addInitMeMethod(millType, allClasses);
+    ASTCDMethod initMeMethod = addInitMeMethod(millType);
     millClass.addCDMember(initMeMethod);
 
-    ASTCDMethod resetMethod = addResetMethod(allClasses, superSymbolList);
+    ASTCDMethod resetMethod = addResetMethod(superSymbolList);
     millClass.addCDMember(resetMethod);
 
     return millClass;
@@ -282,10 +268,10 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     return getMillMethod;
   }
 
-  protected ASTCDMethod addInitMeMethod(ASTMCType millType, List<ASTCDClass> astcdClassList) {
+  protected ASTCDMethod addInitMeMethod(ASTMCType millType) {
     ASTCDParameter astcdParameter = getCDParameterFacade().createParameter(millType, "a");
     ASTCDMethod initMeMethod = this.getCDMethodFacade().createMethod(PUBLIC_STATIC.build(), INIT_ME, astcdParameter);
-    this.replaceTemplate(EMPTY_BODY, initMeMethod, new TemplateHookPoint("mill.InitMeMethod", getAttributeNameList(astcdClassList)));
+    this.replaceTemplate(EMPTY_BODY, initMeMethod, new TemplateHookPoint("mill.InitMeMethod"));
     return initMeMethod;
   }
 
@@ -298,9 +284,9 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     return initMethod;
   }
 
-  protected ASTCDMethod addResetMethod(List<ASTCDClass> astcdClassList, List<DiagramSymbol> superSymbolList) {
+  protected ASTCDMethod addResetMethod(List<DiagramSymbol> superSymbolList) {
     ASTCDMethod resetMethod = this.getCDMethodFacade().createMethod(PUBLIC_STATIC.build(), RESET);
-    this.replaceTemplate(EMPTY_BODY, resetMethod, new TemplateHookPoint("mill.ResetMethod", getAttributeNameList(astcdClassList), superSymbolList));
+    this.replaceTemplate(EMPTY_BODY, resetMethod, new TemplateHookPoint("mill.ResetMethod", superSymbolList));
     return resetMethod;
   }
 
@@ -319,13 +305,19 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
       ASTModifier modifier = PUBLIC_STATIC.build();
       ASTCDMethod builderMethod = this.getCDMethodFacade().createMethod(modifier, builderType, methodName);
       builderMethodsList.add(builderMethod);
-      this.replaceTemplate(EMPTY_BODY, builderMethod, new TemplateHookPoint("mill.BuilderMethod", astName, methodName));
+      this.replaceTemplate(EMPTY_BODY, builderMethod, new TemplateHookPoint("mill.BuilderMethod", methodName));
+      if (methodName.endsWith("SymbolSurrogateBuilder")) {
+        this.replaceTemplate(ANNOTATIONS, builderMethod, new StringHookPoint("@SuppressWarnings(\"removal\")"));
+      }
 
       // add protected Method for Builder
       ASTModifier protectedModifier = PROTECTED.build();
       ASTCDMethod protectedMethod = this.getCDMethodFacade().createMethod(protectedModifier, builderType, "_" + methodName);
       builderMethodsList.add(protectedMethod);
       this.replaceTemplate(EMPTY_BODY, protectedMethod, new TemplateHookPoint("mill.ProtectedBuilderMethod", builderType.printType()));
+      if (methodName.endsWith("SymbolSurrogateBuilder")) {
+        this.replaceTemplate(ANNOTATIONS, protectedMethod, new StringHookPoint("@SuppressWarnings(\"removal\")"));
+      }
     }
 
     return builderMethodsList;
@@ -346,7 +338,7 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     // add public static Method for pretty printing
     ASTCDMethod builderMethod = this.getCDMethodFacade().createMethod(PUBLIC_STATIC.build(), getMCTypeFacade().createStringType(), "prettyPrint", node, printComments);
     prettyPrintMembersList.add(builderMethod);
-    this.replaceTemplate(EMPTY_BODY, builderMethod, new TemplateHookPoint("mill.PrettyPrintBuilderMethod", astName));
+    this.replaceTemplate(EMPTY_BODY, builderMethod, new TemplateHookPoint("mill.PrettyPrintBuilderMethod"));
     this.replaceTemplate(JAVADOC, builderMethod, JavaDoc.of("Uses the composed pretty printer to print an ASTNode of this language")
             .param("node", "The ASTNode to be printed")
             .param("printComments", "Whether comments should be printed")
@@ -359,17 +351,17 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     this.replaceTemplate(EMPTY_BODY, protectedMethod, new TemplateHookPoint("mill.PrettyPrintProtectedBuilderMethod", fullPrettyPrinterType.printType()));
 
     // attribute for caching the full pretty printer
+    // todo FDr
     prettyPrintMembersList.add(this.getCDAttributeFacade().createAttribute(PROTECTED.build(), fullPrettyPrinterType, "fullPrettyPrinter"));
 
     return prettyPrintMembersList;
   }
 
-  protected List<ASTCDMember> addTypeDispatcherMembers(ASTCDClass cdClass, ASTCDPackage cdPackage, ASTMCType millType) {
+  protected List<ASTCDMember> addTypeDispatcherMembers(ASTCDClass cdClass, ASTCDPackage cdPackage) {
     List<ASTCDMember> typeDispatcherMembers = new ArrayList<>();
 
     String typeDispatcherName = cdClass.getName();
     String packageName = cdPackage.getName();
-    String millDispatcherName = MILL_INFIX + typeDispatcherName;
     ASTMCQualifiedType typeDispatcherType = this.getMCTypeFacade().createQualifiedType(packageName + ".I" + typeDispatcherName);
 
     typeDispatcherMembers.add(this.getCDAttributeFacade().createAttribute(PROTECTED.build(), typeDispatcherType, "typeDispatcher"));
@@ -377,13 +369,12 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     ASTCDMethod staticGetter = this.getCDMethodFacade().createMethod(PUBLIC_STATIC.build(), typeDispatcherType, "typeDispatcher");
     this.replaceTemplate(EMPTY_BODY, staticGetter,
         new TemplateHookPoint("mill.BuilderMethod",
-            typeDispatcherName, "typeDispatcher"));
+            "typeDispatcher"));
     typeDispatcherMembers.add(staticGetter);
 
     ASTCDMethod protectedGetter = this.getCDMethodFacade().createMethod(PROTECTED.build(), typeDispatcherType, "_typeDispatcher");
     this.replaceTemplate(EMPTY_BODY, protectedGetter,
         new TemplateHookPoint("mill.TypeDispatcherGetter",
-            millDispatcherName,
             packageName + "." + typeDispatcherName));
     typeDispatcherMembers.add(protectedGetter);
 
@@ -419,9 +410,10 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     String scopesGenitorSimpleName = symbolTableService.getScopesGenitorDelegatorSimpleName();
     String scopesGenitorFullName = symbolTableService.getScopesGenitorDelegatorFullName();
     List<ASTCDMethod> ret = getStaticAndProtectedMethods(StringTransformations.uncapitalize(SCOPES_GENITOR_SUFFIX + DELEGATOR_SUFFIX), scopesGenitorSimpleName, scopesGenitorFullName);
-    this.replaceTemplate(JAVADOC, ret.get(0), JavaDoc.of("Returns a new ScopeGenitorDelegator.",
+    this.replaceTemplate(JAVADOC, ret.getFirst(), JavaDoc.of("Returns a new ScopeGenitorDelegator.",
                     "Delegates to the ScopeGenitors of composed languages, used for instantiating symbol tables in the context of language composition",
                     "See the delegators #createFromAST method.")
+            .block("return", "a new instance of this language's scope genitor delegator")
             .asHP());
     return ret;
   }
@@ -430,10 +422,11 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     String scopesGenitorSimpleName = symbolTableService.getScopesGenitorSimpleName();
     String scopesGenitorFullName = symbolTableService.getScopesGenitorFullName();
     List<ASTCDMethod> ret = getStaticAndProtectedMethods(StringTransformations.uncapitalize(SCOPES_GENITOR_SUFFIX), scopesGenitorSimpleName, scopesGenitorFullName);
-    this.replaceTemplate(JAVADOC, ret.get(0), JavaDoc.of("Returns a new ScopeGenitor.",
-                    "ScopeGenitors are responsible for creating the scope structure of artifacts and linking it with the AST nodes.",
+    this.replaceTemplate(JAVADOC, ret.getFirst(), JavaDoc.of("Returns a new ScopeGenitor.",
+                    "ScopeGenitors are responsible for creating the scope structure of artifacts of only this language and linking it with the AST nodes.",
                     "Note: ScopeGenitors do NOT delegate to elements of composed languages",
                     "which is why you are most likely looking for {@link #scopesGenitorDelegator()}.")
+            .block("return", "a new instance of this language's scope genitor")
             .asHP());
     return ret;
   }
@@ -445,7 +438,7 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     ASTMCType scopesGenitorType = getMCTypeFacade().createQualifiedType(fullName);
 
     ASTCDMethod staticMethod = getCDMethodFacade().createMethod(PUBLIC_STATIC.build(), scopesGenitorType, staticMethodName);
-    this.replaceTemplate(EMPTY_BODY, staticMethod, new TemplateHookPoint("mill.BuilderMethod", name, staticMethodName));
+    this.replaceTemplate(EMPTY_BODY, staticMethod, new TemplateHookPoint("mill.BuilderMethod", staticMethodName));
     methods.add(staticMethod);
 
     ASTCDMethod protectedMethod = getCDMethodFacade().createMethod(PROTECTED.build(), scopesGenitorType, protectedMethodName);
@@ -463,14 +456,18 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     ASTMCType parserType = getMCTypeFacade().createQualifiedType(parserService.getParserClassFullName());
 
     ASTCDMethod staticMethod = getCDMethodFacade().createMethod(PUBLIC_STATIC.build(), parserType, staticMethodName);
-    this.replaceTemplate(EMPTY_BODY, staticMethod, new TemplateHookPoint("mill.BuilderMethod", parserName, staticMethodName));
+    this.replaceTemplate(EMPTY_BODY, staticMethod, new TemplateHookPoint("mill.BuilderMethod", staticMethodName));
     this.replaceTemplate(JAVADOC, staticMethod, JavaDoc.of("Returns a new instance of this language's parser.",
                     "Respects grammar composition by means of the Mill pattern.")
+            .block("return", "a new instance of this language's parser")
             .asHP());
     parserMethods.add(staticMethod);
 
     ASTCDMethod protectedMethod = getCDMethodFacade().createMethod(PROTECTED.build(), parserType, protectedMethodName);
     this.replaceTemplate(EMPTY_BODY, protectedMethod, new TemplateHookPoint("mill.ProtectedParserMethod", parserService.getParserClassFullName()));
+    // The constructor of the parser class is marked as deprecated and commented
+    // to facilitate usage of the Mill
+    this.replaceTemplate(ANNOTATIONS, protectedMethod, new StringHookPoint(" @SuppressWarnings(\"deprecation\")"));
     parserMethods.add(protectedMethod);
 
     return parserMethods;
@@ -484,7 +481,7 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     String protectedMethodName = "_" + staticMethodName;
 
     ASTCDMethod staticMethod = getCDMethodFacade().createMethod(PUBLIC_STATIC.build(), globalScopeAttribute.getMCType(), staticMethodName);
-    this.replaceTemplate(EMPTY_BODY, staticMethod, new TemplateHookPoint("mill.BuilderMethod", StringTransformations.capitalize(attributeName), staticMethodName));
+    this.replaceTemplate(EMPTY_BODY, staticMethod, new TemplateHookPoint("mill.BuilderMethod", staticMethodName));
     globalScopeMethods.add(staticMethod);
 
     ASTCDMethod protectedMethod = getCDMethodFacade().createMethod(PROTECTED.build(), globalScopeAttribute.getMCType(), protectedMethodName);
@@ -514,7 +511,7 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     String protectedMethodName = "_" + staticMethodName;
 
     ASTCDMethod staticMethod = getCDMethodFacade().createMethod(PUBLIC_STATIC.build(), returnType, staticMethodName);
-    this.replaceTemplate(EMPTY_BODY, staticMethod, new TemplateHookPoint("mill.BuilderMethod", scopeName, staticMethodName));
+    this.replaceTemplate(EMPTY_BODY, staticMethod, new TemplateHookPoint("mill.BuilderMethod",staticMethodName));
     scopeMethods.add(staticMethod);
 
     ASTCDMethod protectedMethod = getCDMethodFacade().createMethod(PROTECTED.build(), returnType, protectedMethodName);
@@ -542,6 +539,7 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
     ASTCDMethod builderLoaderMethod = getCDMethodFacade().createMethod(PUBLIC_STATIC.build(),
         getMCTypeFacade().createQualifiedType(symbolSurrogateBuilderFullName), symbolSurrogateBuilderSimpleName);
 
+    this.replaceTemplate(ANNOTATIONS, builderLoaderMethod, new StringHookPoint("@SuppressWarnings(\"removal\")"));
     this.replaceTemplate(EMPTY_BODY, builderLoaderMethod, new StringHookPoint("return " + millFullName + "." + symbolSurrogateBuilderSimpleName + "();"));
     superMethods.add(builderLoaderMethod);
     return superMethods;
@@ -586,7 +584,7 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
 
     // static accessor method
     ASTCDMethod staticMethod = getCDMethodFacade().createMethod(PUBLIC_STATIC.build(), returnType, methodName);
-    this.replaceTemplate(EMPTY_BODY, staticMethod, new TemplateHookPoint("mill.BuilderMethod", StringTransformations.capitalize(attributeName), methodName));
+    this.replaceTemplate(EMPTY_BODY, staticMethod, new TemplateHookPoint("mill.BuilderMethod", methodName));
     this.replaceTemplate(JAVADOC, staticMethod, JavaDoc.of("A traverser is the conceptual entry point for every action within the visitor infrastructure.",
             "Visitors may be added, which contain the implementations for the visit and endVisit methods.",
             "Handlers may be added to modify the default traversal strategy.",
@@ -629,7 +627,7 @@ public class MillDecorator extends AbstractCreator<List<ASTCDPackage>, ASTCDClas
 
     // static accessor method
     ASTCDMethod staticMethod = getCDMethodFacade().createMethod(PUBLIC_STATIC.build(), returnType, methodName);
-    this.replaceTemplate(EMPTY_BODY, staticMethod, new TemplateHookPoint("mill.BuilderMethod", StringTransformations.capitalize(attributeName), methodName));
+    this.replaceTemplate(EMPTY_BODY, staticMethod, new TemplateHookPoint("mill.BuilderMethod", methodName));
     attributeMethods.add(staticMethod);
 
     // protected internal method
