@@ -6,6 +6,7 @@ import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
+import com.google.common.collect.Sets;
 import de.monticore.cd4analysis.CD4AnalysisMill;
 import de.monticore.cd4code.CD4CodeMill;
 import de.monticore.cd4codebasis._ast.ASTCDMethod;
@@ -24,6 +25,7 @@ import de.monticore.generating.templateengine.GlobalExtensionManagement;
 import de.monticore.generating.templateengine.StringHookPoint;
 import de.monticore.generating.templateengine.TemplateHookPoint;
 import de.monticore.symbols.basicsymbols._symboltable.DiagramSymbol;
+import de.monticore.symboltable.ImportStatement;
 import de.monticore.types.mcbasictypes._ast.ASTMCQualifiedType;
 import de.monticore.types.mcbasictypes._ast.ASTMCType;
 import de.se_rwth.commons.StringTransformations;
@@ -158,7 +160,8 @@ public class MillForSuperDecorator extends AbstractCreator<ASTCDCompilationUnit,
   // Cache CDTypeSymbol#resolveCDTypeDown
   protected final LoadingCache<Pair<ICDBasisScope, String>, Optional<CDTypeSymbol>> calcOCDCDTypeDownCache = CacheBuilder.newBuilder()
           .maximumSize(10000)
-          .build(new CacheLoader<Pair<ICDBasisScope, String>, Optional<CDTypeSymbol>>() {
+          .build(new CacheLoader<>() {
+            
             @Override
             public Optional<CDTypeSymbol> load(Pair<ICDBasisScope, String> key) {
               return key.getLeft().resolveCDTypeDown(key.getRight());
@@ -169,12 +172,12 @@ public class MillForSuperDecorator extends AbstractCreator<ASTCDCompilationUnit,
       Collection<CDTypeSymbol>> overridden, Collection<CDTypeSymbol> firstClasses) {
     Map<String, CDTypeSymbol> l = Maps.newLinkedHashMap();
     Collection<DiagramSymbol> importedClasses = ((ICDBasisArtifactScope) cd.getEnclosingScope()).getImportsList().stream()
-        .map(i -> i.getStatement())
+        .map(ImportStatement::getStatement)
         .filter(i -> !service.isJava(i))
         .map(service::resolveCD)
-        .collect(Collectors.toList());
+        .toList();
     for (DiagramSymbol superCd : importedClasses) {
-      Collection<CDTypeSymbol> overriddenSet = Lists.newArrayList();
+      Collection<CDTypeSymbol> overriddenSet = Sets.newHashSet();
       for (String className : nativeClasses) {
         Optional<CDTypeSymbol> cdType = calcOCDCDTypeDownCache.getUnchecked(Pair.of((ICDBasisScope) superCd.getEnclosingScope(),className));
         if (cdType.isPresent()) {
@@ -188,7 +191,13 @@ public class MillForSuperDecorator extends AbstractCreator<ASTCDCompilationUnit,
       if (!overriddenSet.isEmpty()) {
         overridden.put(superCd, overriddenSet);
       }
-      calculateOverriddenCds(superCd, nativeClasses, overridden, firstClasses);
+      Collection<String> astcdClassList = ((ASTCDDefinition) superCd.getAstNode()).getCDClassesList()
+          .stream()
+          .filter(x -> !x.getModifier().isAbstract())
+          .map(ASTCDClass::getName)
+          .collect(Collectors.toList());
+      astcdClassList.addAll(nativeClasses);
+      calculateOverriddenCds(superCd, astcdClassList, overridden, firstClasses);
     }
     firstClasses.addAll(l.values());
   }
