@@ -3,17 +3,18 @@
 package de.monticore.codegen.parser;
 
 import com.google.common.base.Joiner;
+import com.google.common.base.Preconditions;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
 import de.monticore.ast.ASTNode;
 import de.monticore.codegen.mc2cd.TransformationHelper;
+import de.monticore.codegen.parser.antlr.InterfaceInliningAlt;
 import de.monticore.codegen.parser.antlr.Grammar2Antlr;
 import de.monticore.grammar.MCGrammarSymbolTableHelper;
 import de.monticore.grammar.PredicatePair;
 import de.monticore.grammar.grammar._ast.*;
 import de.monticore.grammar.grammar._symboltable.MCGrammarSymbol;
-import de.monticore.grammar.grammar._symboltable.MCGrammarSymbolSurrogate;
 import de.monticore.grammar.grammar._symboltable.ProdSymbol;
 import de.monticore.grammar.grammar._symboltable.ProdSymbolTOP;
 import de.monticore.grammar.grammar_withconcepts.Grammar_WithConceptsMill;
@@ -67,15 +68,18 @@ public class ParserGeneratorHelper {
 
   protected boolean isJava;
 
+  protected InterfaceInliningAlt curInterfaceInliningAlt;
+  protected Map<InterfaceInliningAlt, List<String>> interfaceInliningAltToTmpNames = new LinkedHashMap<>();
+
   /**
    * Constructor for de.monticore.codegen.parser.ParserGeneratorHelper
    */
   public ParserGeneratorHelper(ASTMCGrammar ast, MCGrammarInfo grammarInfo) {
-    Log.errorIfNull(ast);
+    Preconditions.checkNotNull(ast);
     this.astGrammar = ast;
     this.qualifiedGrammarName = astGrammar.getPackageList().isEmpty()
             ? astGrammar.getName()
-            : Joiner.on('.').join(Names.getQualifiedName(astGrammar.getPackageList()),
+            : Joiner.on('.').join(Names.constructQualifiedName(astGrammar.getPackageList()),
             astGrammar.getName());
     this.grammarInfo = grammarInfo;
     this.grammarSymbol = grammarInfo.getGrammarSymbol();
@@ -85,11 +89,11 @@ public class ParserGeneratorHelper {
   }
 
   public ParserGeneratorHelper(ASTMCGrammar ast, MCGrammarInfo grammarInfo, boolean embeddedJavaCode, Languages lang) {
-    Log.errorIfNull(ast);
+    Preconditions.checkNotNull(ast);
     this.astGrammar = ast;
     this.qualifiedGrammarName = astGrammar.getPackageList().isEmpty()
             ? astGrammar.getName()
-            : Joiner.on('.').join(Names.getQualifiedName(astGrammar.getPackageList()),
+            : Joiner.on('.').join(Names.constructQualifiedName(astGrammar.getPackageList()),
             astGrammar.getName());
     this.grammarInfo = grammarInfo;
     this.grammarSymbol = grammarInfo.getGrammarSymbol();
@@ -153,7 +157,7 @@ public class ParserGeneratorHelper {
    * @return the name for a lexsymbol that should be used in an Antlr-File
    */
   public String getOrComputeLexSymbolName(String constName) {
-    Log.errorIfNull(constName);
+    Preconditions.checkNotNull(constName);
     if (grammarInfo.getSplitRules().containsKey(constName)) {
       return grammarInfo.getSplitRules().get(constName);
     } else {
@@ -162,11 +166,29 @@ public class ParserGeneratorHelper {
   }
 
   /**
+   * @param str - A String whose contents were taken directly from a StringLiteral.
+   * @return The original string, but each occurrence of ' is replaced with \'.
+   */
+  @SuppressWarnings("unused") // Used in parser/Lexer.ftl
+  public String escapeSingleQuote(String str) {
+    return str.replace("'", "\\'");
+  }
+
+  /**
+   * @param str - A String whose contents were taken directly from a StringLiteral.
+   * @return The original string, but each occurrence of \" is replaced by ".
+   */
+  @SuppressWarnings("unused") // Used in parser/Lexer.ftl
+  public String unescapeDoubleQuote(String str) {
+    return str.replace("\\\"", "\"");
+  }
+
+  /**
    * Side effect free.
    * @return the name for a lexsymbol that was used in an Antlr-File
    */
   public Optional<String> getCachedLexSymbolName(String constName) {
-    Log.errorIfNull(constName);
+    Preconditions.checkNotNull(constName);
     if (grammarInfo.getSplitRules().containsKey(constName)) {
       return Optional.of(grammarInfo.getSplitRules().get(constName));
     } else {
@@ -190,7 +212,7 @@ public class ParserGeneratorHelper {
     retSet.addAll(
         grammarInfo.getKeywords().stream()
             .filter(f -> !grammarSymbol.getKeywordRulesWithInherited().contains(f))
-            .collect(Collectors.toList())
+            .toList()
     );
     return retSet;
  }
@@ -298,68 +320,87 @@ public class ParserGeneratorHelper {
     else if (a.getTypeList() == null || a.getTypeList().isEmpty()) {
       String variable = a.getVariable();
 
-      if ("int".equals(variable)) {
-        String function = "private int convert%name%(Token t) {\n"
-
-                + "  return Integer.parseInt(t.getText());\n"
-                + " }\n";
-        return createConvertFunction(name, function);
-      } else if ("boolean".equals(variable)) {
-        return createConvertFunction(
-                name,
-                "private boolean convert"
-                        + name
-                        + "(Token t) {\n"
-                        + "    if (t.getText().equals(\"1\")||t.getText().equals(\"start\")||t.getText().equals(\"on\")||t.getText().equals(\"true\")){return true;}else{return false;} \n"
-                        + "}\n");
-      } else if ("byte".equals(variable)) {
-        String function = "private byte convert%name%(Token t) {\n"
-                + "  return Byte.parseByte(t.getText());\n"
-                + " }\n";
-        return createConvertFunction(name, function);
-      } else if ("char".equals(variable)) {
-        return createConvertFunction(name, "private char convert" + name + "(Token t) " + "{\n"
-                + "  return t.getText().charAt(0); \n" + "}\n");
-      } else if ("float".equals(variable)) {
-        String function = "private float convert%name%(Token t) {\n"
-                + "  return Float.parseFloat(t.getText());\n"
-                + " }\n";
-        return createConvertFunction(name, function);
-      } else if ("double".equals(variable)) {
-        String function = "private double convert%name%(Token t) {\n"
-                + "  return Double.parseDouble(t.getText());\n"
-                + " }\n";
-        return createConvertFunction(name, function);
-      } else if ("long".equals(variable)) {
-        String function = "private long convert%name%(Token t) {\n"
-                + "  return Long.parseLong(t.getText());\n"
-                + " }\n";
-        return createConvertFunction(name, function);
-      } else if ("short".equals(variable)) {
-        String function = "private short convert%name%(Token t) {\n"
-                + "return Short.parseShort(t.getText());\n"
-                + " }\n";
-        return createConvertFunction(name, function);
-      } else if ("card".equals(variable)) {
-        String function = "private int convert%name%(Token t) {\n"
-                + "   if (t.getText().equals(\"*\")) return -1; else return Integer.parseInt(t.getText());\n"
-                + " }\n";
-        return createConvertFunction(name, function);
-      } else {
-        Log.warn(
-                "0xA1061 No function for " + a.getVariable() + " registered, will treat it as string!");
-        return createStringConvertFunction(name);
+      switch (variable) {
+        case "int" -> {
+          String function = """
+              private int convert%name%(Token t) {
+                return Integer.parseInt(t.getText());
+               }
+              """;
+          return createConvertFunction(name, function);
+        }
+        case "boolean" -> {
+          String function = "private boolean convert" + name + "(Token t) {\n"
+              + "    if (t.getText().equals(\"1\")||t.getText().equals(\"start\")||t.getText().equals(\"on\")||t.getText().equals(\"true\")){return true;}else{return false;} \n"
+              + "}\n";
+          return createConvertFunction(name, function);
+        }
+        case "byte" -> {
+          String function = """
+              private byte convert%name%(Token t) {
+                return Byte.parseByte(t.getText());
+               }
+              """;
+          return createConvertFunction(name, function);
+        }
+        case "char" -> {
+          return createConvertFunction(name, "private char convert" + name + "(Token t) " + "{\n"
+              + "  return t.getText().charAt(0); \n" + "}\n");
+        }
+        case "float" -> {
+          String function = """
+              private float convert%name%(Token t) {
+                return Float.parseFloat(t.getText());
+               }
+              """;
+          return createConvertFunction(name, function);
+        }
+        case "double" -> {
+          String function = """
+              private double convert%name%(Token t) {
+                return Double.parseDouble(t.getText());
+               }
+              """;
+          return createConvertFunction(name, function);
+        }
+        case "long" -> {
+          String function = """
+              private long convert%name%(Token t) {
+                return Long.parseLong(t.getText());
+               }
+              """;
+          return createConvertFunction(name, function);
+        }
+        case "short" -> {
+          String function = """
+              private short convert%name%(Token t) {
+              return Short.parseShort(t.getText());
+               }
+              """;
+          return createConvertFunction(name, function);
+        }
+        case "card" -> {
+          String function = """
+              private int convert%name%(Token t) {
+                 if (t.getText().equals("*")) return -1; else return Integer.parseInt(t.getText());
+               }
+              """;
+          return createConvertFunction(name, function);
+        }
+        case null, default -> {
+          Log.warn("0xA1061 No function for " + a.getVariable()
+              + " registered, will treat it as string!");
+          return createStringConvertFunction(name);
+        }
       }
     }
     // specific function
     else {
       if (a.isPresentBlock()) {
-        StringBuilder buffer = new StringBuilder();
-        buffer.append(Grammar_WithConceptsMill.prettyPrint(a.getBlock(), true));
-        String createConvertFunction = createConvertFunction(name,
-                "private " + Names.getQualifiedName(a.getTypeList()) + " convert" + name
-                        + "(Token " + a.getVariable() + ")" + " {\n" + buffer.toString() + "}\n");
-        return createConvertFunction;
+        return createConvertFunction(name,
+                "private " + Names.constructQualifiedName(a.getTypeList()) + " convert" + name
+                        + "(Token " + a.getVariable() + ")" + " {\n" + Grammar_WithConceptsMill.prettyPrint(
+                    a.getBlock(), true) + "}\n");
       }
     }
     return "";
@@ -403,7 +444,8 @@ public class ParserGeneratorHelper {
         if (localToken.isPresent() && localToken.get().isIsLexerProd()) {
           prodList.add((ASTLexProd) localToken.get().getAstNode());
         } else {
-          grammarSymbol.getSpannedScope().resolveProdMany(tokenName).stream().filter(p -> p.isIsLexerProd()).forEach(p -> prodList.add((ASTLexProd) p.getAstNode()));
+          grammarSymbol.getSpannedScope().resolveProdMany(tokenName).stream().filter(
+              ProdSymbol::isIsLexerProd).forEach(p -> prodList.add((ASTLexProd) p.getAstNode()));
         }
       }
     }
@@ -421,7 +463,8 @@ public class ParserGeneratorHelper {
           if (localToken.isPresent() && localToken.get().isIsLexerProd()) {
             prodList.add(localToken.get().getAstNode());
           } else {
-            grammarSymbol.getSpannedScope().resolveProdMany(tokenName).stream().filter(p -> p.isIsLexerProd()).forEach(p -> prodList.add(p.getAstNode()));
+            grammarSymbol.getSpannedScope().resolveProdMany(tokenName).stream().filter(
+                ProdSymbol::isIsLexerProd).forEach(p -> prodList.add(p.getAstNode()));
           }
         }
         retMap.put(e.getKey(), prodList);
@@ -444,9 +487,21 @@ public class ParserGeneratorHelper {
 
   public String getTmpVarName(ASTNode a) {
     if (!tmpVariables.containsKey(a)) {
-      tmpVariables.put(a, getNewTmpVar());
+      String newTmpVar = getNewTmpVar();
+      tmpVariables.put(a, newTmpVar);
+      if(curInterfaceInliningAlt != null){
+        interfaceInliningAltToTmpNames.computeIfAbsent(curInterfaceInliningAlt, e -> new ArrayList<>()).add(newTmpVar);
+      }
     }
     return tmpVariables.get(a);
+  }
+
+  public void setCurInterfaceInliningAlt(InterfaceInliningAlt curInterfaceInliningAlt) {
+    this.curInterfaceInliningAlt = curInterfaceInliningAlt;
+  }
+
+  public Map<InterfaceInliningAlt, List<String>> getInterfaceInliningAltToTmpNames() {
+    return interfaceInliningAltToTmpNames;
   }
 
   protected String getNewTmpVar() {
@@ -456,6 +511,7 @@ public class ParserGeneratorHelper {
   public void resetTmpVarNames() {
     tmpVariables.clear();
     tmp_counter = 0;
+    interfaceInliningAltToTmpNames.clear();
   }
 
   public Map<ASTNode, String> getTmpVariables() {
@@ -471,21 +527,17 @@ public class ParserGeneratorHelper {
    * @return String representing value i
    */
   public static String printIteration(int i) {
-    switch (i) {
-      case ASTConstantsGrammar.PLUS:
-        return "+";
-      case ASTConstantsGrammar.STAR:
-        return "*";
-      case ASTConstantsGrammar.QUESTION:
-        return "?";
-      default:
-        return "";
-    }
+    return switch (i) {
+      case ASTConstantsGrammar.PLUS -> "+";
+      case ASTConstantsGrammar.STAR -> "*";
+      case ASTConstantsGrammar.QUESTION -> "?";
+      default -> "";
+    };
   }
 
   public String getTmpVarNameForAntlrCode(ASTNonTerminal node) {
     Optional<ProdSymbol> prod = MCGrammarSymbolTableHelper.getEnclosingRule(node);
-    if (!prod.isPresent()) {
+    if (prod.isEmpty()) {
       Log.error("0xA1006 ASTNonterminal " + node.getName() + "(usageName: " + node.getUsageName()
               + ") can't be resolved.");
       return "";
@@ -504,8 +556,8 @@ public class ParserGeneratorHelper {
     if (!ast.getAltList().isEmpty()) {
       return ast.getAltList();
     }
-    for (MCGrammarSymbolSurrogate g : grammarSymbol.getSuperGrammars()) {
-      final Optional<ProdSymbol> ruleByName = g.lazyLoadDelegate().getProdWithInherited(ast.getName());
+    for (MCGrammarSymbol g : grammarSymbol.getSuperGrammarSymbols()) {
+      final Optional<ProdSymbol> ruleByName = g.getProdWithInherited(ast.getName());
       if (ruleByName.isPresent() && ruleByName.get().isClass()) {
         if (ruleByName.get().isPresentAstNode() && ruleByName.get().getAstNode() instanceof ASTClassProd) {
           return ((ASTClassProd)ruleByName.get().getAstNode()).getAltList();
@@ -529,32 +581,36 @@ public class ParserGeneratorHelper {
    * @return
    */
   public static String getText(ASTNode node) {
-    Log.errorIfNull(node);
+    Preconditions.checkNotNull(node);
 
-    if (node instanceof ASTAction) {
-      StringBuilder buffer = new StringBuilder();
-      for (ASTMCBlockStatement action : ((ASTAction) node).getMCBlockStatementList()) {
-        buffer.append(Grammar_WithConceptsMill.prettyPrint(action, true));
+    switch (node) {
+      case ASTAction astAction -> {
+        StringBuilder buffer = new StringBuilder();
+        for (ASTMCBlockStatement action : astAction.getMCBlockStatementList()) {
+          buffer.append(Grammar_WithConceptsMill.prettyPrint(action, true));
+        }
+        return buffer.toString();
       }
-      return buffer.toString();
-    }
-    if (node instanceof ASTJavaCode) {
-      StringBuilder buffer = new StringBuilder();
-      for (ASTClassBodyDeclaration action : ((ASTJavaCode) node).getClassBodyDeclarationList()) {
-        buffer.append(Grammar_WithConceptsMill.prettyPrint(action, true));
-
+      case ASTJavaCode astJavaCode -> {
+        StringBuilder buffer = new StringBuilder();
+        for (ASTClassBodyDeclaration action : astJavaCode.getClassBodyDeclarationList()) {
+          buffer.append(Grammar_WithConceptsMill.prettyPrint(action, true));
+        }
+        return buffer.toString();
       }
-      return buffer.toString();
-    }
-    if (node instanceof ASTExpressionPredicate) {
-      String exprPredicate = Grammar_WithConceptsMill.prettyPrint((((ASTExpressionPredicate) node).getExpression()), true);
-      Log.debug("ASTExpressionPredicate:\n" + exprPredicate, ParserGenerator.LOG);
-      return exprPredicate;
-    }
-    if (node instanceof ASTGrammar_WithConceptsNode) {
-      String output = Grammar_WithConceptsMill.prettyPrint((ASTGrammar_WithConceptsNode) node, true);
-      Log.debug("ASTGrammar_WithConceptsNode:\n" + output, ParserGenerator.LOG);
-      return output;
+      case ASTExpressionPredicate astExpressionPredicate -> {
+        String exprPredicate =
+            Grammar_WithConceptsMill.prettyPrint((astExpressionPredicate.getExpression()), true);
+        Log.debug("ASTExpressionPredicate:\n" + exprPredicate, ParserGenerator.LOG);
+        return exprPredicate;
+      }
+      case ASTGrammar_WithConceptsNode astGrammarWithConceptsNode -> {
+        String output = Grammar_WithConceptsMill.prettyPrint(astGrammarWithConceptsNode, true);
+        Log.debug("ASTGrammar_WithConceptsNode:\n" + output, ParserGenerator.LOG);
+        return output;
+      }
+      default -> {
+      }
     }
     return "";
   }
@@ -585,7 +641,7 @@ public class ParserGeneratorHelper {
   }
 
   public static String formatAttributeValue(Optional<Integer> value) {
-    if (!value.isPresent()) {
+    if (value.isEmpty()) {
       return "undef";
     } else if (value.get() == TransformationHelper.STAR) {
       return "*";
@@ -611,7 +667,7 @@ public class ParserGeneratorHelper {
   public static String getPackageName(ASTMCGrammar astGrammar, String suffix) {
     String qualifiedGrammarName = astGrammar.getPackageList().isEmpty()
         ? astGrammar.getName()
-        : Joiner.on('.').join(Names.getQualifiedName(astGrammar.getPackageList()),
+        : Joiner.on('.').join(Names.constructQualifiedName(astGrammar.getPackageList()),
         astGrammar.getName());
     return Joiner.on('.').join(qualifiedGrammarName.toLowerCase(), suffix);
   }
