@@ -5,12 +5,9 @@ import de.monticore.grammar.grammar._ast.ASTLexProd;
 import de.monticore.grammar.grammar._ast.ASTMCGrammar;
 import de.monticore.grammar.grammar._cocos.GrammarASTMCGrammarCoCo;
 import de.monticore.grammar.grammar._symboltable.MCGrammarSymbol;
-import de.se_rwth.commons.Joiners;
 import de.se_rwth.commons.logging.Log;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class InheritedModiOverwrite implements GrammarASTMCGrammarCoCo {
 
@@ -29,11 +26,13 @@ public class InheritedModiOverwrite implements GrammarASTMCGrammarCoCo {
         if (lexProd.isPresentMode()) {
           String modeString = lexProd.getMode();
           String prodName = lexProd.getName();
-          List<ASTLexProd> supLexProdList = node.getLexProdList().stream().filter(prod -> prod.getName().equals(prodName)).collect(Collectors.toList());
+          List<ASTLexProd> supLexProdList = node.getLexProdList().stream().filter(prod -> prod.getName().equals(prodName)).toList();
           for (ASTLexProd lex : supLexProdList) {
             if (!lex.isPresentMode()) {
               //warn the user that he inherits a token mode
-              Log.warn(String.format(ERROR_CODE + ERROR_MSG_FORMAT, prodName, grammarName, modeString, prodName, superGrammarName));
+              Log.warn(String.format(ERROR_CODE + ERROR_MSG_FORMAT, prodName, grammarName, modeString, prodName, superGrammarName),
+                lex.get_SourcePositionStart(),
+                lex.get_SourcePositionEnd());
             }
           }
         }
