@@ -9,7 +9,6 @@ import de.se_rwth.commons.logging.Log;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class NoForbiddenProdNameAddon implements GrammarASTMCGrammarCoCo {
 
@@ -36,11 +35,11 @@ public class NoForbiddenProdNameAddon implements GrammarASTMCGrammarCoCo {
     String prodNameWithoutAddon = prodName.substring(0, prodName.lastIndexOf(addon));
     List<ProdSymbol> forbidden = prods.stream()
         .filter(p -> p.getName().equals(prodNameWithoutAddon))
-        .collect(Collectors.toList());
+        .toList();
 
     if(!forbidden.isEmpty()){
       for(ProdSymbol prod: forbidden){
-        Log.error(ERROR_CODE + String.format(ERROR_MSG_FORMAT, prodName, grammarName, prod.getName()));
+        Log.error(ERROR_CODE + String.format(ERROR_MSG_FORMAT, prodName, grammarName, prod.getName()), prod.getSourcePosition());
       }
     }
   }
