@@ -1,5 +1,7 @@
+/* (c) https://github.com/MontiCore/monticore */
 package de.monticore.types3.generics.util;
 
+import com.google.common.base.Preconditions;
 import de.monticore.expressions.expressionsbasis._ast.ASTExpression;
 import de.monticore.types.check.SymTypeExpression;
 import de.monticore.types.check.SymTypeExpressionFactory;
@@ -21,45 +23,30 @@ import de.monticore.types3.generics.context.InferenceContext4Ast;
 import de.monticore.types3.generics.context.InferenceResult;
 import de.monticore.types3.generics.context.InferenceVisitorMode;
 import de.monticore.types3.util.FunctionRelations;
-import de.monticore.types3.util.SymTypeExpressionComparator;
 import de.monticore.visitor.ITraverser;
 import de.se_rwth.commons.logging.Log;
 
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.TreeMap;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import static de.monticore.types.check.SymTypeExpressionFactory.createFunction;
 import static de.monticore.types.check.SymTypeExpressionFactory.createIntersectionOrDefault;
 import static de.monticore.types.check.SymTypeExpressionFactory.createObscureType;
-import static de.monticore.types.check.SymTypeExpressionFactory.createTopType;
 import static de.monticore.types.check.SymTypeExpressionFactory.createUnionOrDefault;
 
 public class CompileTimeTypeCalculator {
 
   protected static final String LOG_NAME = "CompileTimeTypeCalculator";
 
-  // static delegate
-
   protected static CompileTimeTypeCalculator delegate;
 
-  public static void init() {
-    Log.trace("init default FunctionRelations", "TypeCheck setup");
-    CompileTimeTypeCalculator.delegate = new CompileTimeTypeCalculator();
-  }
-
-  protected static CompileTimeTypeCalculator getDelegate() {
-    if (delegate == null) {
-      init();
-    }
-    return delegate;
-  }
+  // methods
 
   /**
    * Takes a resolved type (or similar) and tries to infer an instantiation.
@@ -70,9 +57,9 @@ public class CompileTimeTypeCalculator {
    * and the target type is a function type,
    * filter the results and replace the free type variables.
    * E.g.:
-   * unfiltered type: (T -> byte) & int
-   * target type: short -> short
-   * result: short -> byte
+   * unfiltered type: {@code (T -> byte) & int}
+   * target type: {@code short -> short}
+   * result: {@code short -> byte}
    *
    * @param resolvedType Free type variables must have been replaced
    *                     with inference variables before calling this method.
@@ -86,7 +73,7 @@ public class CompileTimeTypeCalculator {
       Type4Ast type4Ast,
       InferenceContext4Ast infCtx4Ast
   ) {
-    getDelegate().calculateHandleResolvedType(
+    getDelegate()._handleResolvedType(
         expr, resolvedType, typeTraverser, type4Ast, infCtx4Ast
     );
   }
@@ -97,11 +84,11 @@ public class CompileTimeTypeCalculator {
    * <p>
    * E.g., let the expression be '1 : intStream';
    * The Operator ':' can be represented with the function type
-   * (a, Stream<a>) -> Stream<a> with 'a' being a free type variable.
+   * {@code (a, Stream<a>) -> Stream<a>} with 'a' being a free type variable.
    * The arguments of the function will be '1' and 'intStream'.
    * In this case, this will first calculate the compile-time type
-   * of the operator to be (int, Stream<int>) -> Stream<int>.
-   * Therefore, the type of the expression is Stream<int>,
+   * of the operator to be {@code (int, Stream<int>) -> Stream<int>}.
+   * Therefore, the type of the expression is {@code Stream<int>},
    * which is stored in the type4AstMap.
    */
   public static void handleCall(
@@ -112,7 +99,7 @@ public class CompileTimeTypeCalculator {
       Type4Ast type4Ast,
       InferenceContext4Ast infCtx4Ast
   ) {
-    getDelegate().calculateHandleCall(
+    getDelegate()._handleCall(
         expr, funcType, arguments,
         typeTraverser, type4Ast, infCtx4Ast
     );
@@ -143,13 +130,13 @@ public class CompileTimeTypeCalculator {
       Type4Ast type4Ast,
       InferenceContext4Ast infCtx4Ast
   ) {
-    getDelegate().calculateHandleCall(
+    getDelegate()._handleCall(
         callExpr, funcExpr, arguments,
         typeTraverser, type4Ast, infCtx4Ast
     );
   }
 
-  protected void calculateHandleResolvedType(
+  protected void _handleResolvedType(
       ASTExpression expr,
       SymTypeExpression resolvedType,
       ITraverser typeTraverser,
@@ -180,7 +167,7 @@ public class CompileTimeTypeCalculator {
     }
   }
 
-  protected void calculateHandleCall(
+  protected void _handleCall(
       ASTExpression callExpr,
       SymTypeExpression resolvedFuncType,
       List<ASTExpression> arguments,
@@ -208,7 +195,7 @@ public class CompileTimeTypeCalculator {
     );
   }
 
-  protected void calculateHandleCall(
+  protected void _handleCall(
       ASTExpression callExpr,
       ASTExpression funcExpr,
       List<ASTExpression> arguments,
@@ -251,8 +238,8 @@ public class CompileTimeTypeCalculator {
       }
 
       // specifically, a set of functions must have been resolved
-      if (getNonFunctionOfResolvedType(funcExprType).isPresent() ||
-          getFunctionsOfResolvedType(funcExprType).isEmpty()
+      if (getNonFunctionOfResolvedType(funcExprTypeNotNormalized).isPresent() ||
+          getFunctionsOfResolvedType(funcExprTypeNotNormalized).isEmpty()
       ) {
         Log.error("0xFDAB4 encountered a function call, "
                 + "but the called value does not have a function type, "
@@ -264,10 +251,33 @@ public class CompileTimeTypeCalculator {
         type4Ast.setTypeOfExpression(callExpr, createObscureType());
         return;
       }
+      List<SymTypeOfFunction> functions =
+          getFunctionsOfResolvedType(funcExprTypeNotNormalized);
+
+      // check the amount of arguments,
+      // as some visitors may not check the inference context
+      // for the amount of expected arguments and fails fast accordingly
+      {
+        boolean failed = false;
+        for (SymTypeOfFunction function : functions) {
+          if (!function.canHaveArity(arguments.size())) {
+            Log.error("0xFDAB5 encountered a function call with "
+                    + arguments.size() + " arguments"
+                    + ", but got a function type with a different arity: "
+                    + System.lineSeparator() + function.printFullName(),
+                callExpr.get_SourcePositionStart(),
+                callExpr.get_SourcePositionEnd()
+            );
+            failed = true;
+          }
+        }
+        if (failed) {
+          type4Ast.setTypeOfExpression(callExpr, createObscureType());
+          return;
+        }
+      }
 
       // store each function as an inference result.
-      List<SymTypeOfFunction> functions =
-          getFunctionsOfResolvedType(funcExprType);
       inferenceResults = new ArrayList<>(functions.size());
       for (SymTypeOfFunction function : functions) {
         InferenceResult funcTypeAsInfRes = new InferenceResult();
@@ -417,12 +427,14 @@ public class CompileTimeTypeCalculator {
       callCtx.setInferredTypes(List.of(applicabilityRes));
     }
     else {
-      Log.error("0xFD114 internal error: unexpected inference results");
+      Log.error("0xFD114 internal error: unexpected inference results",
+          callExpr.get_SourcePositionStart(),
+          callExpr.get_SourcePositionEnd());
     }
   }
 
   /**
-   * Checks the arguments of the found compile-time function type,
+   * Checks the arguments of the found compile-time function types,
    * given an expression that calls said function.
    * Sets the type in type4Ast for the callExpr.
    * S.a. {@link #passInferenceInformationUpwardsForFunctionCall(ASTExpression, List, InferenceContext4Ast)}
@@ -441,7 +453,7 @@ public class CompileTimeTypeCalculator {
       Type4Ast type4Ast,
       InferenceContext4Ast infCtx4Ast
   ) {
-    assert !targetFunctions.isEmpty();
+    Preconditions.checkArgument(!targetFunctions.isEmpty());
 
     // Given multiple functions, at this point
     // all functions are valid compile-time types.
@@ -467,12 +479,19 @@ public class CompileTimeTypeCalculator {
     );
     List<SymTypeExpression> targetFuncArgTypes = new ArrayList<>();
     for (int i = 0; i < arguments.size(); i++) {
-      int argIdx = Math.min(i, targetFunctions.get(0).sizeArgumentTypes());
+      List<SymTypeExpression> targetFunctionCurrentArgTypes =
+          new ArrayList<>(targetFunctions.size());
+      for (SymTypeOfFunction targetFunction : targetFunctions) {
+        // very conservative;
+        // we have not filtered out non-callable functions
+        int argIdx = Math.min(i, targetFunction.sizeArgumentTypes() - 1);
+        targetFunctionCurrentArgTypes.add(
+            targetFunction.getArgumentType(argIdx
+            ));
+      }
       targetFuncArgTypes.add(createIntersectionOrDefault(
               createObscureType(),
-              targetFunctions.stream()
-                  .map(f -> f.getArgumentType(argIdx))
-                  .collect(Collectors.toList())
+              targetFunctionCurrentArgTypes
           )
       );
     }
@@ -509,7 +528,7 @@ public class CompileTimeTypeCalculator {
               .collect(Collectors.joining(", "))
               + " cannot be used to call the function."
               + " The compile-time function type for the expression "
-              + "has been calculated to be " + targetFunc.printFullName()
+              + "has been calculated to be " + printFunctionForLog(targetFunc)
               + ".",
           callExpr.get_SourcePositionStart(),
           callExpr.get_SourcePositionEnd()
@@ -543,25 +562,35 @@ public class CompileTimeTypeCalculator {
     if (!funcInfo.hasParameterCount()) {
       return getResultIfNoFunctionInfoAvailable(resolvedType, inferenceContext);
     }
+    // check that arguments have not been calculated to Obscure
+    for (int i = 0; i < funcInfo.getParameterCount(); i++) {
+      if (funcInfo.hasArgumentType(i) &&
+          SymTypeRelations.normalize(funcInfo.getArgumentType(i))
+              .isObscureType()
+      ) {
+        InferenceResult result = new InferenceResult();
+        result.setHasErrorOccurred();
+        return result;
+      }
+    }
 
     // we expect a function, thus get only the functions (filter out vars)
     List<SymTypeOfFunction> resolvedFuncs =
         getFunctionsOfResolvedType(resolvedType);
-    List<SymTypeOfFunction> fixArityFuncs =
-        fixArities(resolvedFuncs, funcInfo.getParameterCount());
-    List<SymTypeOfFunction> potentiallyApplicableFuncs = new ArrayList<>();
-    for (SymTypeOfFunction func : fixArityFuncs) {
-      if (FunctionRelations.internal_canPotentiallyBeCalledWith(func, funcInfo)) {
-        potentiallyApplicableFuncs.add(func);
-      }
-    }
-
+    Optional<List<SymTypeOfFunction>> fixArityFuncsOpt =
+        fixAritiesOrLogError(resolvedFuncs, funcInfo.getParameterCount());
+    Optional<List<SymTypeOfFunction>> potentiallyApplicableFuncsOpt =
+        fixArityFuncsOpt.flatMap(fixArityFuncs ->
+            getPotentiallyApplicableFunctionsOrLogError(fixArityFuncs, funcInfo)
+        );
     // Note: this MUST(!) be Map that uses object identity;
     // otherwise, the case is not identified
     // when there are two identical functions (modulo symbols) resolved.
     Optional<Map<SymTypeOfFunction, InferenceResult>> func2InferenceResultOpt =
-        getApplicableFunctionsOrLogError(
-            potentiallyApplicableFuncs, funcInfo
+        potentiallyApplicableFuncsOpt.flatMap(potentiallyApplicableFuncs ->
+            getApplicableFunctionsOrLogError(
+                potentiallyApplicableFuncs, funcInfo
+            )
         );
     if (func2InferenceResultOpt.isEmpty()) {
       InferenceResult result = new InferenceResult();
@@ -591,7 +620,7 @@ public class CompileTimeTypeCalculator {
         // without relying on target type -> pertinent to applicability
         // -> calculate the type
         Log.trace("The most specific function "
-                + mostSpecificFunc.printFullName()
+                + printFunctionForLog(mostSpecificFunc)
                 + "contains no inference variables in the return type."
                 + "Thus switching modes: " + mode.name()
                 + " -> " + InferenceVisitorMode.TYPE_CHECKING.name(),
@@ -629,7 +658,7 @@ public class CompileTimeTypeCalculator {
     ) {
       Log.error("0xFD452 internal error: "
           + "entered final phase of calculating an invocation type for "
-          + infResult.getResolvedFunction().printFullName()
+          + printFunctionForLog(infResult.getResolvedFunction())
           + ", during this, expected a target type without free variables"
           + ", but got " + inferenceContext.getTargetType().printFullName()
       );
@@ -647,7 +676,7 @@ public class CompileTimeTypeCalculator {
    * In the PartialFunctionInfo,
    * given argument-expressions, these are replaced with types,
    * iff a type can be calculated without access to a target type.
-   * E.g., "2+3" is replaced with int, but "new Set<>()" is not replaced,
+   * E.g., {@code "2+3"} is replaced with int, but {@code "new Set<>()"} is not replaced,
    * as the type is not fully known without a target type.
    */
   protected void replaceExprsWithTypesIffNoTargetTypeRequired(
@@ -669,7 +698,7 @@ public class CompileTimeTypeCalculator {
         infCtx.setVisitorMode(InferenceVisitorMode.APPLICABILITY_TEST);
         expr.accept(typeTraverser);
         infCtx = inferenceContext4Ast.getContextOfExpression(expr);
-        if (infCtx.getInferenceResults().size() >= 1) {
+        if (!infCtx.getInferenceResults().isEmpty()) {
           boolean hasResults = true;
           List<SymTypeExpression> instantiations = new ArrayList<>();
           for (InferenceResult infResult : infCtx.getInferenceResults()) {
@@ -803,6 +832,34 @@ public class CompileTimeTypeCalculator {
   }
 
   /**
+   * s. {@link FunctionRelations#internal_canPotentiallyBeCalledWith(SymTypeOfFunction, PartialFunctionInfo)}
+   * logs error if no functions exist that are callable.
+   */
+  protected Optional<List<SymTypeOfFunction>> getPotentiallyApplicableFunctionsOrLogError(
+      List<SymTypeOfFunction> fixedArityFunctions,
+      PartialFunctionInfo funcInfo
+  ) {
+    List<SymTypeOfFunction> potentiallyApplicableFuncs = new ArrayList<>();
+    for (SymTypeOfFunction func : fixedArityFunctions) {
+      if (FunctionRelations.internal_canPotentiallyBeCalledWith(func, funcInfo)) {
+        potentiallyApplicableFuncs.add(func);
+      }
+    }
+    if (potentiallyApplicableFuncs.isEmpty()) {
+      Log.error("0xFD44E no applicable function found!"
+          + System.lineSeparator() + "Arguments pertinent to applicability:"
+          + printPertinentToApplicabilityArgInfo(funcInfo) + System.lineSeparator()
+          + " potentially applicable functions (with regards to arity): "
+          + System.lineSeparator() + fixedArityFunctions.stream()
+          .map(this::printFunctionForLog)
+          .collect(Collectors.joining(System.lineSeparator()))
+      );
+      return Optional.empty();
+    }
+    return Optional.of(potentiallyApplicableFuncs);
+  }
+
+  /**
    * takes potentially applicable functions (s. FunctionRelations)
    * and returns applicable functions and their inference results.
    *
@@ -817,7 +874,7 @@ public class CompileTimeTypeCalculator {
       PartialFunctionInfo funcInfo
   ) {
     Map<SymTypeOfFunction, InferenceResult> func2InferenceResult =
-        new HashMap<>();
+        new LinkedHashMap<>();
     for (SymTypeOfFunction func : potentiallyApplicableFuncs) {
       InferenceResult result = new InferenceResult();
       result.setResolvedFunction(func);
@@ -831,27 +888,40 @@ public class CompileTimeTypeCalculator {
       }
     }
     if (func2InferenceResult.isEmpty()) {
-      StringBuilder argInfo = new StringBuilder();
-      for (int i = 0; i < funcInfo.getParameterCount(); i++) {
-        if (funcInfo.hasArgumentType(i)) {
-          argInfo
-              .append(System.lineSeparator())
-              .append(i)
-              .append(": ")
-              .append(funcInfo.getArgumentType(i).printFullName());
-        }
-      }
       Log.error("0xFD444 no applicable function found!"
           + System.lineSeparator() + "Arguments pertinent to applicability:"
-          + argInfo + System.lineSeparator()
+          + printPertinentToApplicabilityArgInfo(funcInfo) + System.lineSeparator()
           + " potentially applicable functions (before inference): "
           + System.lineSeparator() + potentiallyApplicableFuncs.stream()
-          .map(SymTypeExpression::printFullName)
+          .map(this::printFunctionForLog)
           .collect(Collectors.joining(System.lineSeparator()))
       );
       return Optional.empty();
     }
     return Optional.of(func2InferenceResult);
+  }
+
+  /**
+   * Fixes arity to the specified value.
+   * Filters out all functions that cannot have the specified arity,
+   * and logs an error if none can have the arity.
+   */
+  protected Optional<List<SymTypeOfFunction>> fixAritiesOrLogError(
+      List<SymTypeOfFunction> functions,
+      int parameterCount
+  ) {
+    List<SymTypeOfFunction> funcsFixedArity =
+        fixArities(functions, parameterCount);
+    if (funcsFixedArity.isEmpty()) {
+      Log.error("0xFD44D called function with " + parameterCount
+          + " arguments, but no function found has the required arity:"
+          + System.lineSeparator() + functions.stream()
+          .map(this::printFunctionForLog)
+          .collect(Collectors.joining(System.lineSeparator()))
+      );
+      return Optional.empty();
+    }
+    return Optional.of(funcsFixedArity);
   }
 
   /**
@@ -890,13 +960,14 @@ public class CompileTimeTypeCalculator {
     }
     else {
       // no symbol => no restrictive parameter bounds,
-      // but, the bound typeVar <: Top is required, thus added here.
+      // unless given as explicitly,
+      // but, at least the bound typeVar <: Top is required, thus added here.
       // this function type most likely has been created
       // as a stand-in for e.g., an operator.
       List<SymTypeInferenceVariable> typeVars = TypeParameterRelations
           .getIncludedInferenceVariables(func);
       for (SymTypeInferenceVariable typeVar : typeVars) {
-        bounds.add(new SubTypingBound(typeVar, createTopType()));
+        bounds.add(new SubTypingBound(typeVar, typeVar.getUpperBound()));
       }
     }
     // can always calculate B0 (assuming no internal error)
@@ -948,7 +1019,7 @@ public class CompileTimeTypeCalculator {
       Log.error("0xFD446 unable to select a most specific function."
           + System.lineSeparator() + " Applicable functions:"
           + System.lineSeparator() + func2InferenceResult.keySet().stream()
-          .map(SymTypeExpression::printFullName)
+          .map(this::printFunctionForLog)
           .collect(Collectors.joining(System.lineSeparator()))
       );
       InferenceResult result = new InferenceResult();
@@ -958,7 +1029,7 @@ public class CompileTimeTypeCalculator {
     else {
       Log.trace("inferCalledFunction(): Applicable functions:"
               + System.lineSeparator() + func2InferenceResult.keySet().stream()
-              .map(SymTypeExpression::printFullName)
+              .map(this::printFunctionForLog)
               .collect(Collectors.joining(System.lineSeparator()))
           , LOG_NAME);
     }
@@ -982,7 +1053,7 @@ public class CompileTimeTypeCalculator {
     if (compatibilityInstantiation.isEmpty()) {
       Log.error("0xFD451 the return type"
           + " of the selected compile-time declaration "
-          + infResult.getResolvedFunction().printFullName()
+          + printFunctionForLog(infResult.getResolvedFunction())
           + " (partially instantiated to "
           + infResult.getApplicabilityInstantiation().get().printFullName()
           + ") is not compatible with the target type "
@@ -998,7 +1069,7 @@ public class CompileTimeTypeCalculator {
     if (funcInfo.hasReturnTargetType()) {
       Log.trace("The return type"
               + " of the selected compile-time declaration "
-              + infResult.getResolvedFunction().printFullName()
+              + printFunctionForLog(infResult.getResolvedFunction())
               + " (previously partially instantiated to "
               + infResult.getApplicabilityInstantiation().get().printFullName()
               + ") is compatible with the target type "
@@ -1059,7 +1130,7 @@ public class CompileTimeTypeCalculator {
     List<ExpressionCompatibilityConstraint> constraints = new ArrayList<>();
     SymTypeOfFunction func = inferenceResult.getResolvedFunction();
     Log.trace("START collecting invocation type constraints for "
-            + func.printFullName(),
+            + printFunctionForLog(func),
         LOG_NAME
     );
     for (int i = 0; i < funcInfo.getParameterCount(); i++) {
@@ -1101,7 +1172,7 @@ public class CompileTimeTypeCalculator {
       }
     }
     Log.trace("END collecting invocation type constraints for "
-            + func.printFullName() + ":" + System.lineSeparator()
+            + printFunctionForLog(func) + ":" + System.lineSeparator()
             + printConstraints(constraints),
         LOG_NAME
     );
@@ -1126,12 +1197,12 @@ public class CompileTimeTypeCalculator {
     infResult.setLastInferenceMode(InferenceVisitorMode.TYPE_CHECKING);
     Optional<SymTypeOfFunction> invocationType = infResult.getInvocationType();
     String logInfo = " for compile-time declaration "
-        + infResult.getResolvedFunction().printFullName()
+        + printFunctionForLog(infResult.getResolvedFunction())
         + (funcInfo.hasReturnTargetType()
         ? " with the target type "
-        + funcInfo.getReturnTargetType().printFullName()
+          + funcInfo.getReturnTargetType().printFullName()
         : "") + ".";
-    if (infResult.getInvocationType().isEmpty()) {
+    if (invocationType.isEmpty()) {
       Log.error("0xFD447 cannot resolve function invocation type"
           + logInfo + " Bounds:" + System.lineSeparator()
           + printBounds(infResult.getB4())
@@ -1175,8 +1246,8 @@ public class CompileTimeTypeCalculator {
   }
 
   /**
-   * Reduces constraints of the form <Expr --> type>.
-   * WARNING: While <Expr --> type> IS a constraint,
+   * Reduces constraints of the form {@code <Expr --> type>}.
+   * WARNING: While {@code <Expr --> type>} IS a constraint,
    * it is only ever used in this class;
    * This is used OUTSIDE of
    * {@link de.monticore.types3.generics.util.ConstraintReduction},
@@ -1235,32 +1306,172 @@ public class CompileTimeTypeCalculator {
     return Optional.of(bounds);
   }
 
+  /**
+   * Handles compile time type calculation of "pass-through"-expressions;
+   * Pass-through expressions (a subset of JLS 21 15.2 poly expressions)
+   * which pass a value through the expression,
+   * without modifying the value in any way,
+   * while optionally selecting one out of multiple sub-expressions.
+   * Examples are BracketExpression, ConditionalExpression,
+   * SwitchExpression (currently not part of MC, s. Java).
+   *
+   * @param passThroughExpr             the pass-through expression
+   * @param passedThroughSubExpressions expressions that are passed trough
+   * @param typeCheckingModeCalculation calculation to be done during
+   *                                    the type-checking mode of the visitor.
+   *                                    The target type will have been set
+   *                                    iff applicable.
+   *                                    This usually needs to check
+   *                                    the expression used to select
+   *                                    the expression that is passed through.
+   */
+  public static void handlePassThroughExpression(
+      ASTExpression passThroughExpr,
+      List<ASTExpression> passedThroughSubExpressions,
+      Action typeCheckingModeCalculation,
+      ITraverser typeTraverser,
+      Type4Ast type4Ast,
+      InferenceContext4Ast infCtx4Ast
+  ) {
+    getDelegate()._handlePassThroughExpression(
+        passThroughExpr, passedThroughSubExpressions,
+        typeCheckingModeCalculation,
+        typeTraverser, type4Ast, infCtx4Ast
+    );
+  }
+
+  protected void _handlePassThroughExpression(
+      ASTExpression passThroughExpression,
+      List<ASTExpression> passedThroughSubExpressions,
+      Action typeCheckingModeCalculation,
+      ITraverser typeTraverser,
+      Type4Ast type4Ast,
+      InferenceContext4Ast infCtx4Ast
+  ) {
+    if (passedThroughSubExpressions.isEmpty()) {
+      Log.error("0xFD44C internal error: "
+              + "did not expect empty list.",
+          passThroughExpression.get_SourcePositionStart(),
+          passThroughExpression.get_SourcePositionEnd()
+      );
+    }
+
+    // pass context information down to subExpressions
+    InferenceContext infCtx =
+        infCtx4Ast.getContextOfExpression(passThroughExpression);
+    for (ASTExpression passedThroughSubExpression
+        : passedThroughSubExpressions
+    ) {
+      infCtx4Ast.setContextOfExpression(
+          passedThroughSubExpression, infCtx.deepClone()
+      );
+    }
+
+    // calculate inference Results iff applicable
+    List<InferenceResult> infRess = new ArrayList<>();
+    if (infCtx4Ast.getContextOfExpression(passThroughExpression)
+        .getVisitorMode() != InferenceVisitorMode.TYPE_CHECKING
+    ) {
+      for (ASTExpression passedThroughSubExpression
+          : passedThroughSubExpressions
+      ) {
+        passedThroughSubExpression.accept(typeTraverser);
+        infRess.addAll(infCtx4Ast
+            .getContextOfExpression(passedThroughSubExpression)
+            .getInferenceResults()
+        );
+      }
+    }
+
+    // if required, use the type-checking mode calculation
+    if (infRess.isEmpty()) {
+      // usually visit, traverse, endvisit
+      infCtx.setVisitorMode(InferenceVisitorMode.TYPE_CHECKING);
+      typeCheckingModeCalculation.run();
+    }
+    // otherwise, simply pass the inference results upwards
+    else {
+      infCtx4Ast.getContextOfExpression(passThroughExpression)
+          .setInferredTypes(infRess);
+    }
+  }
+
   // Helper
 
+  /**
+   * Only exists as Java is missing a {@code ()->void} functional interface.
+   * This is not meant to be used otherwise.
+   * (Runnable is specifically meant to be used for threads)
+   */
+  @FunctionalInterface
+  public interface Action {
+    void run();
+  }
+
+  /**
+   * @param resolvedType must not be normalized
+   * @return List of normalized functions included in the resolved type
+   */
   protected List<SymTypeOfFunction> getFunctionsOfResolvedType(
       SymTypeExpression resolvedType
   ) {
-    List<SymTypeOfFunction> resolvedFuncs;
-    if (resolvedType.isIntersectionType()) {
-      resolvedFuncs =
-          resolvedType.asIntersectionType().getIntersectedTypeSet().stream()
-              .filter(SymTypeExpression::isFunctionType)
-              .map(SymTypeExpression::asFunctionType)
-              .collect(Collectors.toList());
-    }
-    else if (resolvedType.isFunctionType()) {
-      resolvedFuncs = Collections.singletonList(resolvedType.asFunctionType());
-    }
-    else {
-      resolvedFuncs = Collections.emptyList();
-    }
+    List<SymTypeExpression> resolvedTypesNonNormalized =
+        splitResolvedType(resolvedType);
+    List<SymTypeExpression> resolvedTypes =
+        resolvedTypesNonNormalized.stream()
+            .map(SymTypeRelations::normalize)
+            .toList();
+    List<SymTypeOfFunction> resolvedFuncs = resolvedTypes.stream()
+        .filter(SymTypeExpression::isFunctionType)
+        .map(SymTypeExpression::asFunctionType)
+        .collect(Collectors.toList());
     return resolvedFuncs;
   }
 
+  /**
+   * @param resolvedType must not be normalized
+   * @return the non-function(s) included in the resolved type
+   */
   protected Optional<SymTypeExpression> getNonFunctionOfResolvedType(
       SymTypeExpression resolvedType
   ) {
     Optional<SymTypeExpression> nonFunctionType;
+    List<SymTypeExpression> resolvedTypesNonNormalized =
+        splitResolvedType(resolvedType);
+    List<SymTypeExpression> resolvedTypesNormalized =
+        resolvedTypesNonNormalized.stream()
+            .map(SymTypeRelations::normalize)
+            .toList();
+    // more than 1 non-function type is in most languages not expected
+    // if there are no non-functions, return the function(s),
+    // this gets filtered outside of inference
+    List<SymTypeExpression> nonFuncsNonNormalized = new ArrayList<>();
+    for (int i = 0; i < resolvedTypesNormalized.size(); i++) {
+      if (!resolvedTypesNormalized.get(i).isFunctionType()) {
+        nonFuncsNonNormalized.add(resolvedTypesNonNormalized.get(i));
+      }
+    }
+    if (!nonFuncsNonNormalized.isEmpty()) {
+      nonFunctionType = Optional.of(SymTypeExpressionFactory
+          .createIntersectionOrDefault(
+              resolvedType, nonFuncsNonNormalized
+          )
+      );
+    }
+    else {
+      nonFunctionType = Optional.empty();
+    }
+    return nonFunctionType;
+  }
+
+  /**
+   * splits a (non-normalized) resolved type into it's components
+   *
+   * @return a list of non-normalized types
+   */
+  protected List<SymTypeExpression> splitResolvedType(
+      SymTypeExpression resolvedType
+  ) {
     List<SymTypeExpression> resolvedTypes;
     if (resolvedType.isIntersectionType()) {
       resolvedTypes = new ArrayList<>(
@@ -1270,23 +1481,7 @@ public class CompileTimeTypeCalculator {
     else {
       resolvedTypes = Collections.singletonList(resolvedType);
     }
-    List<SymTypeExpression> nonFuncs = resolvedTypes.stream()
-        .filter(Predicate.not(SymTypeExpression::isFunctionType))
-        .collect(Collectors.toList());
-    // more than 1 non-function type is in most languages not expected
-    // if there are no non-functions, return the function(s),
-    // this gets filtered outside of inference
-    if (nonFuncs.size() >= 1) {
-      nonFunctionType = Optional.of(SymTypeExpressionFactory
-          .createIntersectionOrDefault(
-              resolvedType, nonFuncs
-          )
-      );
-    }
-    else {
-      nonFunctionType = Optional.empty();
-    }
-    return nonFunctionType;
+    return resolvedTypes;
   }
 
   /**
@@ -1300,13 +1495,13 @@ public class CompileTimeTypeCalculator {
   ) {
     List<SymTypeInferenceVariable> infVars = func.getTypeArguments().stream()
         .map(SymTypeExpression::asInferenceVariable)
-        .collect(Collectors.toList());
+        .toList();
     SymTypeOfFunction declaredFunc = func.getDeclaredType();
     List<SymTypeVariable> typeParams = declaredFunc.getTypeArguments().stream()
         .map(SymTypeExpression::asTypeVariable)
-        .collect(Collectors.toList());
+        .toList();
     Map<SymTypeVariable, SymTypeInferenceVariable> typeParamReplaceMap =
-        new TreeMap<>(new SymTypeExpressionComparator());
+        new TreeMap<>();
     for (int i = 0; i < typeParams.size(); i++) {
       typeParamReplaceMap.put(typeParams.get(i), infVars.get(i));
     }
@@ -1324,14 +1519,57 @@ public class CompileTimeTypeCalculator {
 
   protected String printBounds(List<Bound> bounds) {
     return bounds.stream()
+        .sorted()
         .map(Bound::print)
         .collect(Collectors.joining(System.lineSeparator()));
   }
 
   protected String printConstraints(List<? extends Constraint> constraints) {
     return constraints.stream()
+        .sorted()
         .map(Constraint::print)
         .collect(Collectors.joining(System.lineSeparator()));
+  }
+
+  protected String printPertinentToApplicabilityArgInfo(PartialFunctionInfo funcInfo) {
+    StringBuilder argInfo = new StringBuilder();
+    for (int i = 0; i < funcInfo.getParameterCount(); i++) {
+      if (funcInfo.hasArgumentType(i)) {
+        argInfo
+            .append(System.lineSeparator())
+            .append(i)
+            .append(": ")
+            .append(funcInfo.getArgumentType(i).printFullName());
+      }
+    }
+    return argInfo.toString();
+  }
+
+  protected String printFunctionForLog(SymTypeOfFunction func) {
+    return func.printFullName()
+        + (func.hasSymbol() ? " [" + func.getSymbol().getFullName() + "]" : "");
+  }
+
+  // static delegate
+
+  public static void init() {
+    Log.trace("init default CompileTimeTypeCalculator", "TypeCheck setup");
+    setDelegate(new CompileTimeTypeCalculator());
+  }
+
+  public static void reset() {
+    CompileTimeTypeCalculator.delegate = null;
+  }
+
+  protected static void setDelegate(CompileTimeTypeCalculator newDelegate) {
+    CompileTimeTypeCalculator.delegate = Preconditions.checkNotNull(newDelegate);
+  }
+
+  protected static CompileTimeTypeCalculator getDelegate() {
+    if (CompileTimeTypeCalculator.delegate == null) {
+      init();
+    }
+    return CompileTimeTypeCalculator.delegate;
   }
 
 }
