@@ -2,59 +2,45 @@
 
 package mc.examples.lwc;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
-
-import java.io.IOException;
-import java.util.Optional;
-
-import de.se_rwth.commons.logging.Log;
-import de.se_rwth.commons.logging.LogStub;
-import mc.examples.lwc.odl.odl.ODLMill;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
-
 import com.google.common.collect.Lists;
-
-import mc.GeneratorIntegrationsTest;
+import de.monticore.runtime.junit.TestWithMCLanguage;
+import mc.examples.lwc.odl.odl.ODLMill;
 import mc.examples.lwc.odl.odl._ast.ASTInstances;
 import mc.examples.lwc.odl.odl._ast.ASTODLCompilationUnit;
 import mc.examples.lwc.odl.odl._parser.ODLParser;
 import org.junit.jupiter.api.Test;
 
-public class TestODL extends GeneratorIntegrationsTest {
-  
-  @BeforeEach
-  public void before() {
-    LogStub.init();
-    Log.enableFailQuick(false);
-  }
-  
+import java.io.IOException;
+import java.util.Optional;
+
+import static org.junit.jupiter.api.Assertions.*;
+
+@TestWithMCLanguage(ODLMill.class)
+public class TestODL {
+
   @Test
   public void testParser() throws IOException {
-    ODLParser parser = new ODLParser();
+    ODLParser parser = ODLMill.parser();
     Optional<ASTODLCompilationUnit> ast = parser
         .parseODLCompilationUnit("src/test/resources/examples/lwc/odl/MyWorld.odl");
-    Assertions.assertFalse(parser.hasErrors());
-    Assertions.assertTrue(ast.isPresent());
+    assertFalse(parser.hasErrors());
+    assertTrue(ast.isPresent());
     
     ASTInstances instances = ast.get().getInstances();
-    Assertions.assertNotNull(instances);
+    assertNotNull(instances);
     
-    Assertions.assertEquals(instances.getName(), "MyWorld");
-    Assertions.assertEquals(instances.getObjectList().size(), 2);
+    assertEquals("MyWorld", instances.getName());
+    assertEquals(2, instances.getObjectList().size());
     
-    Assertions.assertEquals(instances.getObjectList().get(0).getName(), "person");
-    Assertions.assertTrue(instances.getObjectList().get(0).getType().deepEquals(
+    assertEquals("person", instances.getObjectList().getFirst().getName());
+    assertTrue(instances.getObjectList().getFirst().getType().deepEquals(
         ODLMill.qualifiedNameBuilder().setNamesList(Lists.newArrayList("Person")).build()));
     
-    Assertions.assertEquals(instances.getObjectList().get(0).getAssignmentList().size(), 4);
-    Assertions.assertEquals(instances.getObjectList().get(0).getAssignmentList().get(0).getName(), "birthday");
-    Assertions.assertTrue(instances
+    assertEquals(4, instances.getObjectList().getFirst().getAssignmentList().size());
+    assertEquals("birthday", instances.getObjectList().getFirst().getAssignmentList().get(0).getName());
+    assertTrue(instances
         .getObjectList()
-        .get(0)
+        .getFirst()
         .getAssignmentList()
         .get(0)
         .getValue()
@@ -62,10 +48,10 @@ public class TestODL extends GeneratorIntegrationsTest {
             ODLMill.dateValueBuilder()
                 .setDate(ODLMill.dateBuilder().setDay("01").setMonth("01").setYear("1999").build()).build()));
     
-    Assertions.assertEquals(instances.getObjectList().get(0).getAssignmentList().get(1).getName(), "name");
-    Assertions.assertTrue(instances
+    assertEquals("name", instances.getObjectList().getFirst().getAssignmentList().get(1).getName());
+    assertTrue(instances
         .getObjectList()
-        .get(0)
+        .getFirst()
         .getAssignmentList()
         .get(1)
         .getValue()
@@ -73,10 +59,10 @@ public class TestODL extends GeneratorIntegrationsTest {
             ODLMill.stringValueBuilder()
                 .setSTRING("alice").build()));
     
-    Assertions.assertEquals(instances.getObjectList().get(0).getAssignmentList().get(2).getName(), "id");
-    Assertions.assertTrue(instances
+    assertEquals("id", instances.getObjectList().getFirst().getAssignmentList().get(2).getName());
+    assertTrue(instances
         .getObjectList()
-        .get(0)
+        .getFirst()
         .getAssignmentList()
         .get(2)
         .getValue()
@@ -84,8 +70,8 @@ public class TestODL extends GeneratorIntegrationsTest {
             ODLMill.intValueBuilder()
                 .setINT("1").build()));
     
-    Assertions.assertEquals(instances.getObjectList().get(0).getAssignmentList().get(3).getName(), "car");
-    Assertions.assertTrue(instances
+    assertEquals("car", instances.getObjectList().get(0).getAssignmentList().get(3).getName());
+    assertTrue(instances
         .getObjectList()
         .get(0)
         .getAssignmentList()
@@ -95,10 +81,9 @@ public class TestODL extends GeneratorIntegrationsTest {
             ODLMill.referenceValueBuilder()
                 .setName("car").build()));
     
-    Assertions.assertEquals(instances.getObjectList().get(1).getName(), "car");
-    Assertions.assertTrue(instances.getObjectList().get(1).getType().deepEquals(
+    assertEquals("car", instances.getObjectList().get(1).getName());
+    assertTrue(instances.getObjectList().get(1).getType().deepEquals(
         ODLMill.qualifiedNameBuilder().setNamesList(Lists.newArrayList("lwc", "edl", "Car")).build()));
-    Assertions.assertTrue(Log.getFindings().isEmpty());
   }
   
 }
